// Package hash æä¾›åŒºå—å“ˆå¸Œè®¡ç®—æœåŠ¡
//
// ğŸ¯ æ ¸å¿ƒèŒè´£ï¼š
// 1. æä¾›ç¡®å®šæ€§çš„åŒºå—å“ˆå¸Œè®¡ç®—æœåŠ¡
// 2. å®ç°gRPC BlockHashServiceæ¥å£
// 3. æ”¯æŒè°ƒè¯•ä¿¡æ¯å’Œæ€§èƒ½ç›‘æ§
// 4. ç¡®ä¿è·¨å¹³å°å“ˆå¸Œè®¡ç®—ä¸€è‡´æ€§
package hash

import (
	"context"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"google.golang.org/protobuf/proto"
)

// BlockHashService å®ç°åŒºå—å“ˆå¸ŒæœåŠ¡
type BlockHashService struct {
	core.UnimplementedBlockHashServiceServer
	hashManager crypto.HashManager
	logger      log.Logger
}

// NewBlockHashService åˆ›å»ºåŒºå—å“ˆå¸ŒæœåŠ¡å®ä¾‹
func NewBlockHashService(hashManager crypto.HashManager, logger log.Logger) *BlockHashService {
	return &BlockHashService{
		hashManager: hashManager,
		logger:      logger,
	}
}

// ComputeBlockHash è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
func (s *BlockHashService) ComputeBlockHash(ctx context.Context, req *core.ComputeBlockHashRequest) (*core.ComputeBlockHashResponse, error) {
	startTime := time.Now()

	if req.Block == nil || req.Block.Header == nil {
		return &core.ComputeBlockHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º")
	}

	// åºåˆ—åŒ–åŒºå—å¤´è¿›è¡Œå“ˆå¸Œè®¡ç®—
	headerBytes, err := proto.Marshal(req.Block.Header)
	if err != nil {
		return &core.ComputeBlockHashResponse{
			Hash:    nil,
			IsValid: false,
		}, fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥: %w", err)
	}

	// ä½¿ç”¨HashManageræ¥å£çš„DoubleSHA-256ç®—æ³•ï¼ˆç¡®å®šæ€§ï¼Œä¸æŒ–çŸ¿ä¿æŒä¸€è‡´ï¼‰
	// æ³¨æ„ï¼šæŒ–çŸ¿ä½¿ç”¨DoubleSHA256ï¼ŒéªŒè¯ä¹Ÿå¿…é¡»ä½¿ç”¨DoubleSHA256ï¼Œç¡®ä¿ä¸€è‡´æ€§
	hash := s.hashManager.DoubleSHA256(headerBytes)

	response := &core.ComputeBlockHashResponse{
		Hash:    hash,
		IsValid: true,
	}

	// å¦‚æœéœ€è¦è°ƒè¯•ä¿¡æ¯
	if req.IncludeDebugInfo {
		response.DebugInfo = &core.BlockHashDebugInfo{
			CanonicalBytes:      headerBytes,
			CanonicalLength:     uint64(len(headerBytes)),
			SerializationMethod: "protobuf",
			IncludedFields: []string{
				"version", "previous_hash", "merkle_root", "timestamp",
				"height", "nonce", "difficulty",
			},
			ExcludedFields:       []string{},
			ComputationTimeNanos: uint64(time.Since(startTime).Nanoseconds()),
		}
	}

	return response, nil
}

// ValidateBlockHash éªŒè¯åŒºå—å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
func (s *BlockHashService) ValidateBlockHash(ctx context.Context, req *core.ValidateBlockHashRequest) (*core.ValidateBlockHashResponse, error) {
	if req == nil {
		return &core.ValidateBlockHashResponse{
			IsValid: false,
		}, fmt.Errorf("éªŒè¯è¯·æ±‚ä¸èƒ½ä¸ºç©º")
	}

	// è®¡ç®—å®é™…å“ˆå¸Œ
	computeReq := &core.ComputeBlockHashRequest{
		Block:            req.Block,
		IncludeDebugInfo: false, // éªŒè¯æ—¶ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	computeResp, err := s.ComputeBlockHash(ctx, computeReq)
	if err != nil {
		return &core.ValidateBlockHashResponse{
			IsValid: false,
		}, fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ¯”è¾ƒå“ˆå¸Œå€¼
	isValid := string(computeResp.Hash) == string(req.ExpectedHash)

	response := &core.ValidateBlockHashResponse{
		IsValid:      isValid,
		ComputedHash: computeResp.Hash,
		ExpectedHash: req.ExpectedHash,
	}

	if !isValid {
		errorMsg := "åŒºå—å“ˆå¸ŒéªŒè¯å¤±è´¥ï¼šè®¡ç®—çš„å“ˆå¸Œä¸æœŸæœ›å€¼ä¸åŒ¹é…"
		response.ErrorMessage = &errorMsg
	}

	return response, nil
}

// ComputeBlockHeaderHash è®¡ç®—åŒºå—å¤´å“ˆå¸Œçš„ç®€åŒ–æ¥å£
// ç”¨äºä¸éœ€è¦gRPCæ¥å£çš„åœºæ™¯
func (s *BlockHashService) ComputeBlockHeaderHash(header *core.BlockHeader) ([]byte, error) {
	if header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	// åºåˆ—åŒ–åŒºå—å¤´
	headerBytes, err := proto.Marshal(header)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥: %w", err)
	}

	// è®¡ç®—DoubleSHA-256å“ˆå¸Œï¼ˆä¸æŒ–çŸ¿ä¿æŒä¸€è‡´ï¼‰
	return s.hashManager.DoubleSHA256(headerBytes), nil
}
