// Package account æœ‰æ•ˆä½™é¢è®¡ç®—å®ç°
//
// âš–ï¸ **æœ‰æ•ˆå¯ç”¨ä½™é¢è®¡ç®—å®ç° (Effective Balance Calculation)**
//
// æœ¬æ–‡ä»¶å®ç°æœ‰æ•ˆå¯ç”¨ä½™é¢çš„æ ¸å¿ƒè®¡ç®—é€»è¾‘ï¼Œè§£å†³å®¡æŸ¥æŠ¥å‘Šä¸­ç”¨æˆ·æœŸæœ›çš„é—®é¢˜ï¼š
// - å®æ—¶ä½™é¢æ‰£å‡ï¼šè®¡ç®— "æˆ‘ç°åœ¨çœŸæ­£èƒ½èŠ±å¤šå°‘é’±"
// - é€æ˜è®¡ç®—è¿‡ç¨‹ï¼šæ˜ç¡®æ˜¾ç¤ºè®¡ç®—å…¬å¼çš„å„ä¸ªç»„æˆéƒ¨åˆ†
// - åœ°å€è¯†åˆ«ï¼šè§£å†³çŸ¿å·¥åœ°å€ã€æ‰¾é›¶ç­‰æ··æ·†æƒ…å†µ
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**
// - æœ‰æ•ˆä½™é¢è®¡ç®—ï¼šconfirmed.available - pending.out + pending.in
// - çŸ¿å·¥åœ°å€è¯†åˆ«ï¼šè§£å†³å®¡æŸ¥æŠ¥å‘Šä¸­çš„åœ°å€æ··æ·†é—®é¢˜
// - è°ƒè¯•ä¿¡æ¯æ”¶é›†ï¼šä¾¿äºé—®é¢˜è¯Šæ–­å’Œç”¨æˆ·ç†è§£
package account

import (
	"context"
	"fmt"
	"time"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
//                              æœ‰æ•ˆä½™é¢è®¡ç®—æ ¸å¿ƒ
// ============================================================================

// getEffectiveBalance è·å–æœ‰æ•ˆå¯ç”¨ä½™é¢
//
// ğŸ¯ **æœ‰æ•ˆä½™é¢è®¡ç®—æ ¸å¿ƒå®ç°**
//
// å®ç°å®¡æŸ¥æŠ¥å‘Šä¸­å»ºè®®çš„å…¬å¼ï¼š
// æœ‰æ•ˆå¯ç”¨ä½™é¢ = å·²ç¡®è®¤å¯ç”¨ä½™é¢ - å¾…ç¡®è®¤æ”¯å‡º + å¾…ç¡®è®¤æ”¶å…¥
//
// è§£å†³çš„é—®é¢˜ï¼š
// 1. ç”¨æˆ·æœŸæœ›å…¥æ± åç«‹å³çœ‹åˆ°ä½™é¢å‡å°‘
// 2. çŸ¿å·¥åœ°å€æ”¶åˆ°å¥–åŠ±å¯¼è‡´çš„ä½™é¢å¢åŠ æ··æ·†
// 3. æ‰¾é›¶äº¤æ˜“å¯¼è‡´çš„ä½™é¢å˜åŒ–ä¸æ˜æ˜¾
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	address: æŸ¥è¯¢çš„è´¦æˆ·åœ°å€
//	tokenID: ä»£å¸æ ‡è¯†ç¬¦ï¼ˆnilè¡¨ç¤ºå¹³å°ä¸»å¸ï¼‰
//
// è¿”å›ï¼š
//
//	*types.EffectiveBalanceInfo: æœ‰æ•ˆä½™é¢ä¿¡æ¯
//	error: è®¡ç®—é”™è¯¯
func (m *Manager) getEffectiveBalance(ctx context.Context, address []byte, tokenID []byte) (*types.EffectiveBalanceInfo, error) {
	startTime := time.Now()

	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹è®¡ç®—æœ‰æ•ˆå¯ç”¨ä½™é¢ - address: %x, tokenID: %x", address, tokenID)
	}

	// å‚æ•°éªŒè¯
	if len(address) == 0 {
		return nil, fmt.Errorf("åœ°å€ä¸èƒ½ä¸ºç©º")
	}

	// æ„å»ºåœ°å€å¯¹è±¡
	addressObj := &transaction.Address{RawHash: address}

	// ğŸ”¥ æ­¥éª¤1ï¼šè·å–å·²ç¡®è®¤çš„å¯ç”¨ä½™é¢
	utxoQueryStart := time.Now()
	confirmedAvailable, utxoDebugInfo, err := m.getConfirmedAvailableBalance(ctx, address, tokenID)
	if err != nil {
		return nil, fmt.Errorf("è·å–å·²ç¡®è®¤ä½™é¢å¤±è´¥: %w", err)
	}
	utxoQueryDuration := time.Since(utxoQueryStart).Milliseconds()

	// ğŸ”¥ æ­¥éª¤2ï¼šè®¡ç®—å¾…ç¡®è®¤çš„æ”¯å‡ºå’Œæ”¶å…¥
	txPoolQueryStart := time.Now()
	pendingOut, pendingIn, pendingDebugInfo, err := m.calculatePendingOutAndIn(ctx, address, tokenID)
	if err != nil {
		if m.logger != nil {
			m.logger.Warnf("è®¡ç®—å¾…ç¡®è®¤ä½™é¢å¤±è´¥ï¼Œå°†ä½¿ç”¨é›¶å€¼: %v", err)
		}
		// ç»§ç»­æ‰§è¡Œï¼Œä½†ä½¿ç”¨é›¶å€¼
		pendingOut = 0
		pendingIn = 0
	}
	txPoolQueryDuration := time.Since(txPoolQueryStart).Milliseconds()

	// ğŸ”¥ æ­¥éª¤3ï¼šè®¡ç®—æœ‰æ•ˆå¯ç”¨ä½™é¢
	// å…¬å¼ï¼šSpendableAmount = ConfirmedAvailable - PendingOut + PendingIn
	var spendableAmount uint64 = 0
	if confirmedAvailable >= pendingOut {
		spendableAmount = confirmedAvailable - pendingOut + pendingIn
	} else {
		// å¦‚æœå¾…ç¡®è®¤æ”¯å‡ºè¶…è¿‡å¯ç”¨ä½™é¢ï¼Œå¯åŠ¨ç”¨ä½™é¢ä¸º0
		spendableAmount = 0
		if m.logger != nil {
			m.logger.Warnf("å¾…ç¡®è®¤æ”¯å‡º(%.6f)è¶…è¿‡å·²ç¡®è®¤ä½™é¢(%.6f), å¯åŠ¨ç”¨ä½™é¢ä¸º0",
				float64(pendingOut)/1e9, float64(confirmedAvailable)/1e9)
		}
	}

	// ğŸ”¥ æ­¥éª¤4ï¼šæ„å»ºè°ƒè¯•ä¿¡æ¯
	var debugInfo *types.EffectiveBalanceDebugInfo
	if utxoDebugInfo != nil || pendingDebugInfo != nil {
		debugInfo = &types.EffectiveBalanceDebugInfo{
			CalculatedAt:      time.Now(),
			UTXOQueryDuration: utxoQueryDuration,
			TxPoolQueryTime:   txPoolQueryDuration,
		}

		// åˆå¹¶UTXOè°ƒè¯•ä¿¡æ¯
		if utxoDebugInfo != nil {
			debugInfo.AvailableUTXOCount = utxoDebugInfo.AvailableUTXOCount
			debugInfo.ReferencedUTXOCount = utxoDebugInfo.ReferencedUTXOCount
			debugInfo.LockedUTXOCount = utxoDebugInfo.LockedUTXOCount
			debugInfo.IsMinerAddress = utxoDebugInfo.IsMinerAddress
			debugInfo.LastMiningRewardHeight = utxoDebugInfo.LastMiningRewardHeight
		}

		// åˆå¹¶Pendingè°ƒè¯•ä¿¡æ¯
		if pendingDebugInfo != nil {
			debugInfo.PendingTransactionIds = pendingDebugInfo.PendingTransactionIds
			debugInfo.FastConfirmationCount = pendingDebugInfo.FastConfirmationCount
		}
	}

	// ğŸ”¥ æ­¥éª¤5ï¼šæ„å»ºç»“æœå¯¹è±¡
	effectiveBalance := &types.EffectiveBalanceInfo{
		Address:            addressObj,
		TokenID:            tokenID,
		SpendableAmount:    spendableAmount,
		ConfirmedAvailable: confirmedAvailable,
		PendingOut:         pendingOut,
		PendingIn:          pendingIn,
		PendingTxCount:     0, // å°†åœ¨ä¸‹é¢å¡«å……
		PendingOutTxCount:  0,
		PendingInTxCount:   0,
		LastUpdated:        time.Now(),
		UpdateHeight:       0, // TODO: ä»åŒºå—é“¾è·å–å½“å‰é«˜åº¦
		CalculationMethod:  "confirmed_available_minus_pending_out_plus_pending_in",
		DebugInfo:          debugInfo,
	}

	// å¡«å……äº¤æ˜“è®¡æ•°ä¿¡æ¯
	if pendingDebugInfo != nil {
		effectiveBalance.PendingTxCount = uint32(len(pendingDebugInfo.PendingTransactionIds))
		// TODO: åŒºåˆ†æ”¯å‡ºå’Œæ”¶å…¥äº¤æ˜“æ•°
	}

	if m.logger != nil {
		m.logger.Debugf("æœ‰æ•ˆå¯ç”¨ä½™é¢è®¡ç®—å®Œæˆ - address: %x, spendable: %.6f, confirmed: %.6f, pendingOut: %.6f, pendingIn: %.6f",
			address, float64(spendableAmount)/1e9, float64(confirmedAvailable)/1e9,
			float64(pendingOut)/1e9, float64(pendingIn)/1e9)
	}

	totalDuration := time.Since(startTime)
	if m.logger != nil {
		m.logger.Debugf("æœ‰æ•ˆä½™é¢è®¡ç®—æ€»è€—æ—¶: %dms (UTXOæŸ¥è¯¢: %dms, TxPoolæŸ¥è¯¢: %dms)",
			totalDuration.Milliseconds(), utxoQueryDuration, txPoolQueryDuration)
	}

	return effectiveBalance, nil
}

// ============================================================================
//                              å·²ç¡®è®¤ä½™é¢è®¡ç®—
// ============================================================================

// utxoDebugInfo UTXOæŸ¥è¯¢è°ƒè¯•ä¿¡æ¯
type utxoDebugInfo struct {
	AvailableUTXOCount     uint32
	ReferencedUTXOCount    uint32
	LockedUTXOCount        uint32
	IsMinerAddress         bool
	LastMiningRewardHeight uint64
}

// getConfirmedAvailableBalance è·å–å·²ç¡®è®¤çš„å¯ç”¨ä½™é¢
func (m *Manager) getConfirmedAvailableBalance(ctx context.Context, address []byte, tokenID []byte) (uint64, *utxoDebugInfo, error) {
	// æŸ¥è¯¢Assetç±»å‹çš„UTXO
	assetCategory := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	utxos, err := m.utxoManager.GetUTXOsByAddress(ctx, address, &assetCategory, true) // onlyAvailable=true
	if err != nil {
		return 0, nil, fmt.Errorf("æŸ¥è¯¢UTXOå¤±è´¥: %w", err)
	}

	var confirmedAvailable uint64 = 0
	debugInfo := &utxoDebugInfo{}

	for _, utxoObj := range utxos {
		if utxoObj.GetCategory() != utxo.UTXOCategory_UTXO_CATEGORY_ASSET {
			continue
		}

		// ç»Ÿè®¡UTXOçŠ¶æ€
		switch utxoObj.GetStatus() {
		case utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE:
			debugInfo.AvailableUTXOCount++
		case utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_REFERENCED:
			debugInfo.ReferencedUTXOCount++
		default:
			debugInfo.LockedUTXOCount++
		}

		// åªç»Ÿè®¡å¯ç”¨çŠ¶æ€çš„UTXO
		if utxoObj.GetStatus() != utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
			continue
		}

		// æå–é‡‘é¢
		var amount uint64 = 0
		if tokenID == nil {
			// æŸ¥è¯¢åŸç”Ÿå¸
			amount, err = m.extractNativeCoinAmount(utxoObj)
			if err != nil || amount == 0 {
				continue
			}
		} else {
			// æŸ¥è¯¢æŒ‡å®šä»£å¸
			extractedTokenID, tokenAmount, err := m.extractTokenAmount(utxoObj, tokenID)
			if err != nil || extractedTokenID == nil || tokenAmount == 0 {
				continue
			}
			if !bytesEqual(extractedTokenID, tokenID) {
				continue
			}
			amount = tokenAmount
		}

		confirmedAvailable += amount
	}

	// TODO: è¯†åˆ«æ˜¯å¦ä¸ºçŸ¿å·¥åœ°å€
	// debugInfo.IsMinerAddress = m.isMinerAddress(address)
	// debugInfo.LastMiningRewardHeight = m.getLastMiningRewardHeight(address)

	return confirmedAvailable, debugInfo, nil
}

// ============================================================================
//                              å¾…ç¡®è®¤ä½™é¢è®¡ç®—
// ============================================================================

// pendingDebugInfo Pendingäº¤æ˜“è°ƒè¯•ä¿¡æ¯
type pendingDebugInfo struct {
	PendingTransactionIds [][]byte
	FastConfirmationCount uint32
}

// calculatePendingOutAndIn è®¡ç®—å¾…ç¡®è®¤çš„æ”¯å‡ºå’Œæ”¶å…¥
//
// è¿™æ˜¯è§£å†³å®¡æŸ¥æŠ¥å‘Šä¸­é—®é¢˜çš„æ ¸å¿ƒï¼šæ­£ç¡®è®¡ç®—pendingæ”¯å‡ºï¼Œè€Œä¸æ˜¯åªç»Ÿè®¡pendingæ”¶å…¥
func (m *Manager) calculatePendingOutAndIn(ctx context.Context, address []byte, tokenID []byte) (uint64, uint64, *pendingDebugInfo, error) {
	// è·å–æ‰€æœ‰pendingäº¤æ˜“
	txs, err := m.txPool.GetAllPendingTransactions()
	if err != nil {
		return 0, 0, nil, fmt.Errorf("è·å–å¾…å¤„ç†äº¤æ˜“å¤±è´¥: %w", err)
	}

	var pendingOut uint64 = 0 // å¾…ç¡®è®¤æ”¯å‡ºï¼ˆæ­£æ•°ï¼‰
	var pendingIn uint64 = 0  // å¾…ç¡®è®¤æ”¶å…¥ï¼ˆæ­£æ•°ï¼‰

	debugInfo := &pendingDebugInfo{
		PendingTransactionIds: make([][]byte, 0),
	}

	for _, tx := range txs {
		if tx == nil {
			continue
		}

		// è®¡ç®—è¯¥äº¤æ˜“å¯¹ç›®æ ‡åœ°å€ä¸ä»£å¸çš„å‡€å˜åŠ¨
		delta, _, err := m.computePendingDeltaForTx(ctx, tx, address, tokenID)
		if err != nil {
			if m.logger != nil {
				m.logger.Warnf("è®¡ç®—äº¤æ˜“å‡€å˜åŠ¨å¤±è´¥ï¼Œå¿½ç•¥æ­¤äº¤æ˜“: %v", err)
			}
			continue
		}

		if delta == 0 {
			continue // è¯¥äº¤æ˜“ä¸å½±å“ç›®æ ‡åœ°å€çš„ä½™é¢
		}

		// è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		var txID []byte
		if m.txHashService != nil {
			hashReq := &transaction.ComputeHashRequest{
				Transaction:      tx,
				IncludeDebugInfo: false,
			}
			hashResp, err := m.txHashService.ComputeHash(ctx, hashReq)
			if err == nil && hashResp.IsValid {
				txID = hashResp.Hash
				debugInfo.PendingTransactionIds = append(debugInfo.PendingTransactionIds, txID)
			}
		}

		// ğŸ”¥ å…³é”®ä¿®æ­£ï¼šæ­£ç¡®åŒºåˆ†æ”¯å‡ºå’Œæ”¶å…¥
		if delta > 0 {
			// æ­£æ•°è¡¨ç¤ºæ”¶å…¥
			pendingIn += uint64(delta)
		} else {
			// è´Ÿæ•°è¡¨ç¤ºæ”¯å‡ºï¼Œè½¬æ¢ä¸ºæ­£æ•°ç´¯åŠ åˆ°pendingOut
			pendingOut += uint64(-delta)
		}
	}

	if m.logger != nil {
		m.logger.Debugf("å¾…ç¡®è®¤ä½™é¢è®¡ç®—å®Œæˆ - address: %x, pendingOut: %.6f, pendingIn: %.6f, txCount: %d",
			address, float64(pendingOut)/1e9, float64(pendingIn)/1e9, len(debugInfo.PendingTransactionIds))
	}

	return pendingOut, pendingIn, debugInfo, nil
}

// ============================================================================
//                              è¾…åŠ©å·¥å…·æ–¹æ³•
// ============================================================================

// æ³¨æ„ï¼šextractAmountFromTxOutput å‡½æ•°å·²åœ¨ pending.go ä¸­å®šä¹‰ï¼Œæ­¤å¤„ç›´æ¥ä½¿ç”¨
