// Package fork åˆ†å‰å¤„ç†æ ¸å¿ƒé€»è¾‘
package fork

import (
	"bytes"
	"context"
	"errors"
	"fmt"
	"strings"
	"time"

	"github.com/weisyn/v1/internal/core/chain/fork/reorg"
	"github.com/weisyn/v1/internal/core/chain/fork/reorg/managers"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/writegate"
	"github.com/weisyn/v1/pkg/types"
	corruptutil "github.com/weisyn/v1/pkg/utils/corruption"
)

// ============================================================================
//                              åˆ†å‰å¤„ç†å®ç°
// ============================================================================

// handleFork å¤„ç†åˆ†å‰çš„æ ¸å¿ƒé€»è¾‘
//
// ğŸ¯ **èŒè´£**ï¼š
// - éªŒè¯åˆ†å‰åŒºå—
// - æ¯”è¾ƒé“¾æƒé‡
// - å†³å®šæ˜¯å¦åˆ‡æ¢é“¾
// - æ‰§è¡Œé‡ç»„
//
// å®ç°æµç¨‹ï¼š
// 1. æ£€æŸ¥æ˜¯å¦æ­£åœ¨å¤„ç†åˆ†å‰
// 2. æ£€æµ‹åˆ†å‰ç‚¹
// 3. è®¡ç®—é“¾æƒé‡
// 4. æ¯”è¾ƒæƒé‡å†³ç­–
// 5. æ‰§è¡Œé“¾åˆ‡æ¢ï¼ˆå¦‚éœ€è¦ï¼‰
// 6. æ›´æ–°æŒ‡æ ‡
func (s *Service) handleFork(ctx context.Context, forkBlock *core.Block) error {
	// æ£€æŸ¥åˆ†å‰åŒºå—æ˜¯å¦ä¸º nil
	if forkBlock == nil {
		return fmt.Errorf("åˆ†å‰åŒºå—ä¸èƒ½ä¸ºç©º")
	}

	// æ£€æŸ¥åŒºå—å¤´æ˜¯å¦ä¸º nil
	if forkBlock.Header == nil {
		return fmt.Errorf("åˆ†å‰åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	// 1. æ£€æŸ¥æ˜¯å¦æ­£åœ¨å¤„ç†åˆ†å‰
	if s.isProcessing() {
		return fmt.Errorf("æ­£åœ¨å¤„ç†å¦ä¸€ä¸ªåˆ†å‰ï¼Œè¯·ç¨åé‡è¯•")
	}

	// 2. è®¾ç½®å¤„ç†çŠ¶æ€
	s.setProcessing(true, forkBlock.Header.Height)
	defer s.setProcessing(false, 0)

	// 3. å¢åŠ åˆ†å‰è®¡æ•°
	s.incrementMetric("total_forks")

	if s.logger != nil {
		s.logger.Infof("ğŸ”„ å¼€å§‹å¤„ç†åˆ†å‰: é«˜åº¦=%d", forkBlock.Header.Height)
	}

	startTime := time.Now()

	// 4. æ£€æµ‹åˆ†å‰ç‚¹
	isFork, forkHeight, err := s.detectFork(ctx, forkBlock)
	if err != nil {
		h := forkBlock.Header.Height
		s.publishCorruptionDetected(ctx, types.CorruptionPhaseReorg, types.CorruptionSeverityCritical, &h, "", "", err)
		// è‡ªè¿è¡Œï¼šå¦‚æœå±äºå¯è‡ªæ„ˆçš„å­˜å‚¨/ç´¢å¼•é”™è¯¯ï¼Œç»™ RepairManager ä¸€ä¸ªçŸ­çª—å£å†é‡è¯•ä¸€æ¬¡
		if isRepairableForFork(err) {
			if waitAndRetry(ctx, 1200*time.Millisecond) == nil {
				isFork, forkHeight, err = s.detectFork(ctx, forkBlock)
				if err == nil {
					goto forkDetected
				}
			}
		}
		return fmt.Errorf("æ£€æµ‹åˆ†å‰å¤±è´¥: %w", err)
	}
forkDetected:

	if !isFork {
		if s.logger != nil {
			s.logger.Info("âœ… ä¸æ˜¯åˆ†å‰åŒºå—ï¼Œæ­£å¸¸å¤„ç†")
		}
		return nil
	}

	if s.logger != nil {
		s.logger.Infof("æ£€æµ‹åˆ°åˆ†å‰ç‚¹: é«˜åº¦=%d", forkHeight)
	}

	// 5. è·å–å½“å‰ä¸»é“¾ä¿¡æ¯
	chainInfo, err := s.queryService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	currentHeight := chainInfo.Height

	// 6. è®¡ç®—åˆ†å‰æ·±åº¦
	forkDepth := uint32(currentHeight - forkHeight)

	if s.logger != nil {
		s.logger.Infof("åˆ†å‰æ·±åº¦: %d ä¸ªåŒºå—", forkDepth)
	}

	// 7. æ£€æŸ¥åˆ†å‰æ·±åº¦æ˜¯å¦è¶…è¿‡é˜ˆå€¼ï¼ˆä»é…ç½®è·å–ï¼Œé»˜è®¤ 100ï¼‰
	maxForkDepth := uint32(s.getMaxForkDepth())
	if forkDepth > maxForkDepth {
		if s.logger != nil {
			s.logger.Warnf("âš ï¸ åˆ†å‰æ·±åº¦ %d è¶…è¿‡é˜ˆå€¼ %dï¼ˆconsensus.miner.max_fork_depthï¼‰ï¼Œæ‹’ç»å¤„ç†ã€‚"+
				"è¿™é€šå¸¸æ„å‘³ç€å‘ç”Ÿäº†å¼‚å¸¸æ·±åº¦çš„é‡ç»„æˆ–é•¿æ—¶é—´ç½‘ç»œåˆ†åŒºã€‚å»ºè®®è¿ç»´æ“ä½œï¼š"+
				"1) æ£€æŸ¥ç½‘ç»œå’Œä¸Šæ¸¸èŠ‚ç‚¹å¥åº·ï¼›2) è¯„ä¼°æ˜¯å¦ä¸´æ—¶è°ƒé«˜ max_fork_depthï¼›3) å¦‚é“¾æ•°æ®å­˜åœ¨æ˜æ˜¾é”™è¯¯ï¼Œè€ƒè™‘æ‰§è¡Œç¦»çº¿ä¿®å¤è„šæœ¬æˆ–é‡å»ºèŠ‚ç‚¹ã€‚",
				forkDepth, maxForkDepth)
		}
		return fmt.Errorf("åˆ†å‰æ·±åº¦è¿‡å¤§: %d > %dï¼ˆå— consensus.miner.max_fork_depth é™åˆ¶ï¼‰", forkDepth, maxForkDepth)
	}

	// 8. è®¡ç®—ä¸»é“¾æƒé‡
	mainChainWeight, err := s.calculateChainWeight(ctx, forkHeight, currentHeight)
	if err != nil {
		h := forkHeight
		s.publishCorruptionDetected(ctx, types.CorruptionPhaseReorg, types.CorruptionSeverityCritical, &h, "", "", err)
		if isRepairableForFork(err) {
			if waitAndRetry(ctx, 1200*time.Millisecond) == nil {
				mainChainWeight, err = s.calculateChainWeight(ctx, forkHeight, currentHeight)
				if err == nil {
					goto mainWeightOK
				}
			}
		}
		return fmt.Errorf("è®¡ç®—ä¸»é“¾æƒé‡å¤±è´¥: %w", err)
	}
mainWeightOK:

	// 9. è®¡ç®—åˆ†å‰é“¾æƒé‡
	forkChainWeight, err := s.calculateChainWeight(ctx, forkHeight, forkBlock.Header.Height)
	if err != nil {
		h := forkHeight
		s.publishCorruptionDetected(ctx, types.CorruptionPhaseReorg, types.CorruptionSeverityCritical, &h, "", "", err)
		if isRepairableForFork(err) {
			if waitAndRetry(ctx, 1200*time.Millisecond) == nil {
				forkChainWeight, err = s.calculateChainWeight(ctx, forkHeight, forkBlock.Header.Height)
				if err == nil {
					goto forkWeightOK
				}
			}
		}
		return fmt.Errorf("è®¡ç®—åˆ†å‰é“¾æƒé‡å¤±è´¥: %w", err)
	}
forkWeightOK:

	if s.logger != nil {
		s.logger.Infof("é“¾æƒé‡æ¯”è¾ƒ: ä¸»é“¾=%s, åˆ†å‰é“¾=%s",
			mainChainWeight.String(), forkChainWeight.String())
	}

	// 10. æ¯”è¾ƒæƒé‡å†³å®šæ˜¯å¦åˆ‡æ¢
	shouldSwitch := s.shouldSwitchChain(mainChainWeight, forkChainWeight)

	if !shouldSwitch {
		if s.logger != nil {
			s.logger.Info("âœ… ä¸»é“¾æƒé‡æ›´å¤§ï¼Œä¿æŒä¸»é“¾ä¸å˜")
		}
		s.incrementMetric("resolved_forks")
		return nil
	}

	// 11. æ‰§è¡Œé“¾åˆ‡æ¢
	if s.logger != nil {
		s.logger.Warn("âš ï¸ åˆ†å‰é“¾æƒé‡æ›´å¤§ï¼Œå‡†å¤‡åˆ‡æ¢ä¸»é“¾")
	}

	if err := s.switchChain(ctx, forkBlock, forkHeight); err != nil {
		h := forkHeight
		s.publishCorruptionDetected(ctx, types.CorruptionPhaseReorg, types.CorruptionSeverityCritical, &h, "", "", err)
		if isRepairableForFork(err) {
			if waitAndRetry(ctx, 1200*time.Millisecond) == nil {
				if err2 := s.switchChain(ctx, forkBlock, forkHeight); err2 == nil {
					goto switchOK
				}
			}
		}
		return fmt.Errorf("é“¾åˆ‡æ¢å¤±è´¥: %w", err)
	}
switchOK:

	// 12. æ›´æ–°æŒ‡æ ‡
	s.incrementMetric("resolved_forks")
	s.incrementMetric("total_reorgs")
	s.updateReorgDepth(forkDepth)

	duration := time.Since(startTime)
	if s.logger != nil {
		s.logger.Infof("âœ… åˆ†å‰å¤„ç†å®Œæˆï¼Œè€—æ—¶: %.2fs", duration.Seconds())
	}

	return nil
}

func isRepairableForFork(err error) bool {
	cls := corruptutil.ClassifyErr(err)
	switch cls {
	case "index_corrupt_hash_height", "index_corrupt_height_index", "tip_inconsistent", "tx_index_corrupt":
		return true
	default:
		return false
	}
}

func waitAndRetry(ctx context.Context, d time.Duration) error {
	t := time.NewTimer(d)
	defer t.Stop()
	select {
	case <-ctx.Done():
		return ctx.Err()
	case <-t.C:
		return nil
	}
}

// ============================================================================
//                              é“¾åˆ‡æ¢å®ç°
// ============================================================================

// switchChain æ‰§è¡Œé“¾åˆ‡æ¢
//
// ğŸ”„ **é“¾é‡ç»„æ ¸å¿ƒé€»è¾‘**
//
// æ­¥éª¤ï¼š
// 1. åˆ›å»º UTXO å¿«ç…§
// 2. å›æ»šä¸»é“¾åŒºå—
// 3. åº”ç”¨åˆ†å‰é“¾åŒºå—
// 4. éªŒè¯æ–°é“¾çŠ¶æ€
// 5. æ›´æ–°é“¾å°–
func (s *Service) switchChain(ctx context.Context, forkBlock *core.Block, forkHeight uint64) error {
	return s.switchChainWithProvider(ctx, forkBlock, forkHeight, nil)
}

// deleteByPrefix æ‰¹é‡åˆ é™¤æŒ‡å®šå‰ç¼€çš„é”®ï¼ˆprefixScan + DeleteManyï¼‰
func (s *Service) deleteByPrefix(ctx context.Context, prefix []byte) (int, error) {
	if s == nil || s.store == nil {
		return 0, fmt.Errorf("badger store æœªæ³¨å…¥")
	}
	m, err := s.store.PrefixScan(ctx, prefix)
	if err != nil {
		return 0, err
	}
	if len(m) == 0 {
		return 0, nil
	}
	keys := make([][]byte, 0, len(m))
	for k := range m {
		keys = append(keys, []byte(k))
	}
	if err := s.store.DeleteMany(ctx, keys); err != nil {
		return 0, err
	}
	return len(keys), nil
}

// clearReorgStateForGenesisRebuild æ¸…ç† reorg åˆ° genesis æ‰€éœ€çš„å¯é‡å»ºçŠ¶æ€ï¼ˆUTXO/ç´¢å¼•/é“¾å°–ï¼‰
func (s *Service) clearReorgStateForGenesisRebuild(ctx context.Context) error {
	if s == nil || s.store == nil {
		return fmt.Errorf("badger store æœªæ³¨å…¥ï¼Œæ— æ³•æ‰§è¡Œ genesis é‡å»º")
	}

	// 1) æ¸…ç† UTXO ä¸»é›†ä¸ç´¢å¼•/å¼•ç”¨å…³ç³»
	for _, p := range [][]byte{
		[]byte("utxo:set:"),
		[]byte("index:address:"),
		[]byte("index:height:"),
		[]byte("index:asset:"),
		[]byte("ref:"),
	} {
		if _, err := s.deleteByPrefix(ctx, p); err != nil {
			return fmt.Errorf("æ¸…ç†å‰ç¼€å¤±è´¥(%s): %w", string(p), err)
		}
	}

	// 2) æ¸…ç†äº¤æ˜“ç´¢å¼•ï¼ˆæ—§é“¾æ®‹ç•™ä¼šæ±¡æŸ“æŸ¥è¯¢ï¼‰
	if _, err := s.deleteByPrefix(ctx, []byte("indices:tx:")); err != nil {
		return fmt.Errorf("æ¸…ç†äº¤æ˜“ç´¢å¼•å¤±è´¥(indices:tx:): %w", err)
	}

	// 2.1) æ¸…ç†åŒºå—ç´¢å¼•ï¼ˆblocks/ æ–‡ä»¶ä¸å¼ºåˆ¶åˆ é™¤ï¼Œä½†ç´¢å¼•å¿…é¡»æ¸…ç©ºä»¥é¿å…æ—§é“¾æ®‹ç•™è¢«æŸ¥è¯¢/ä¿®å¤é€»è¾‘è¯¯ç”¨ï¼‰
	// - é«˜åº¦ç´¢å¼•ï¼šindices:height:{height}
	// - å“ˆå¸Œç´¢å¼•ï¼šindices:hash:{hash} -> height
	for _, p := range [][]byte{
		[]byte("indices:height:"),
		[]byte("indices:hash:"),
	} {
		if _, err := s.deleteByPrefix(ctx, p); err != nil {
			return fmt.Errorf("æ¸…ç†åŒºå—ç´¢å¼•å¤±è´¥(%s): %w", string(p), err)
		}
	}

	// 3) æ¸…ç†èµ„æº/å†å²ç´¢å¼•ï¼ˆä¾èµ– UTXO/é“¾å†å²ï¼Œå¯ç”±é‡æ”¾é‡å»ºï¼‰
	for _, p := range [][]byte{
		[]byte("indices:resource:"),          // æ—§ contentHash ç´¢å¼•/èµ„æºå†å²
		[]byte("indices:resource-instance:"), // æ–°å®ä¾‹ç´¢å¼•
		[]byte("indices:resource-code:"),     // code->instances
		[]byte("resource:utxo-instance:"),
		[]byte("resource:counters-instance:"),
		[]byte("index:resource:owner-instance:"),
		[]byte("indices:utxo:history:"),
	} {
		if _, err := s.deleteByPrefix(ctx, p); err != nil {
			return fmt.Errorf("æ¸…ç†èµ„æº/å†å²å‰ç¼€å¤±è´¥(%s): %w", string(p), err)
		}
	}

	// 4) æ¸…ç†é“¾å°–/çŠ¶æ€æ ¹ï¼Œä½¿ DataWriter è¿›å…¥â€œç©ºé“¾çŠ¶æ€â€ï¼Œå…è®¸é‡æ–°å†™å…¥ genesis(0)
	if err := s.store.DeleteMany(ctx, [][]byte{
		[]byte("state:chain:tip"),
		[]byte("state:chain:root"),
	}); err != nil {
		return fmt.Errorf("æ¸…ç†é“¾çŠ¶æ€å¤±è´¥(state:chain:*): %w", err)
	}

	return nil
}

// rebuildChainFromGenesis é€šè¿‡â€œä» genesis é¡ºåºå†™å…¥â€å®Œæˆåˆ‡é“¾ï¼ˆæ”¯æŒ forkHeight=0 çš„å½»åº• reorgï¼‰
func (s *Service) rebuildChainFromGenesis(
	ctx context.Context,
	newTip *core.Block,
	provider func(height uint64) (*core.Block, bool),
) error {
	if s == nil || s.blockProcessor == nil || s.queryService == nil {
		return fmt.Errorf("ä¾èµ–æœªæ³¨å…¥ï¼ˆblockProcessor/queryServiceï¼‰")
	}
	if newTip == nil || newTip.Header == nil {
		return fmt.Errorf("newTip ä¸ºç©º")
	}
	// genesis(0) ä»æœ¬åœ°è¯»å–ï¼ˆé“¾èº«ä»½ç¡¬æ ¡éªŒå·²åœ¨ sync hello v2 å®Œæˆï¼‰
	genesis, err := s.queryService.GetBlockByHeight(ctx, 0)
	if err != nil {
		return fmt.Errorf("è¯»å– genesis å¤±è´¥: %w", err)
	}
	if genesis == nil || genesis.Header == nil || genesis.Header.Height != 0 {
		return fmt.Errorf("genesis æ— æ•ˆæˆ–ç¼ºå¤±")
	}

	if err := s.blockProcessor.ProcessBlock(ctx, genesis); err != nil {
		return fmt.Errorf("é‡å»ºå†™å…¥ genesis å¤±è´¥: %w", err)
	}

	for h := uint64(1); h <= newTip.Header.Height; h++ {
		blk, ok := provider(h)
		if !ok || blk == nil || blk.Header == nil {
			return fmt.Errorf("é‡å»ºç¼ºå¤±åˆ†å‰æ®µåŒºå—: height=%d", h)
		}
		if blk.Header.Height != h {
			return fmt.Errorf("é‡å»ºåˆ†å‰æ®µé«˜åº¦ä¸ä¸€è‡´: expect=%d got=%d", h, blk.Header.Height)
		}
		if err := s.blockProcessor.ProcessBlock(ctx, blk); err != nil {
			return fmt.Errorf("é‡å»ºå†™å…¥åŒºå—å¤±è´¥: height=%d err=%w", h, err)
		}
	}
	return nil
}

// rebuildChainByLocalPrefixAndForkProvider åœ¨â€œå¿«ç…§ä¸å¯ç”¨/æŸåâ€æ—¶ï¼Œèµ°ç”Ÿäº§çº§è‡ªçœä¿®å¤ï¼š
// - æ¸…ç†å¯é‡å»ºçŠ¶æ€ï¼ˆUTXO/ç´¢å¼•/é“¾å°–ï¼‰
// - ä»æœ¬åœ°å·²æœ‰ä¸»é“¾å—ï¼ˆ0..forkHeightï¼‰é¡ºåºé‡æ”¾
// - forkHeight+1..newTipHeight å¿…é¡»ç”± provider æä¾›ï¼ˆå³åŒæ­¥ä¸‹è½½çš„åˆ†å‰æ®µï¼‰
//
// è¯´æ˜ï¼š
// - è¿™æ˜¯å¯¹å¿«ç…§æ¢å¤å¤±è´¥çš„â€œæ ¹æ²»å…œåº•â€ï¼Œé¿å…åŒæ­¥/é‡ç»„è¿›å…¥å¿…å¤±è´¥çŠ¶æ€ã€‚
// - è¯¥è·¯å¾„æ¯”å¿«ç…§æ…¢ï¼Œä½†ç¡®å®šæ€§å¼ºï¼šä»¥åŒºå—ä¸ºå”¯ä¸€çœŸç›¸é‡å»ºçŠ¶æ€ã€‚
func (s *Service) rebuildChainByLocalPrefixAndForkProvider(
	ctx context.Context,
	forkHeight uint64,
	newTip *core.Block,
	provider func(height uint64) (*core.Block, bool),
) error {
	if s == nil || s.blockProcessor == nil || s.queryService == nil || s.store == nil {
		return fmt.Errorf("ä¾èµ–æœªæ³¨å…¥ï¼ˆblockProcessor/queryService/storeï¼‰")
	}
	if newTip == nil || newTip.Header == nil {
		return fmt.Errorf("newTip ä¸ºç©º")
	}
	if provider == nil {
		return fmt.Errorf("provider ä¸ºç©ºï¼šæ— æ³•è·å–åˆ†å‰æ®µåŒºå—")
	}

	// ğŸ”§ å¯ç”¨ Recovery Modeï¼ˆå…è®¸åœ¨åªè¯»æ¨¡å¼ä¸‹æ‰§è¡Œä¿®å¤ï¼‰
	var recoveryToken string
	var recoveryEnabled bool
	if s.writeGate != nil {
		tok, err := s.writeGate.EnableRecoveryMode("self-introspection-rebuild")
		if err != nil {
			return fmt.Errorf("å¯ç”¨æ¢å¤æ¨¡å¼å¤±è´¥: %w", err)
		}
		recoveryToken = tok
		recoveryEnabled = true
		defer func() {
			if recoveryEnabled {
				_ = s.writeGate.DisableRecoveryMode(recoveryToken)
			}
		}()

		// å°† recovery token ç»‘å®šåˆ° context
		ctx = writegate.WithWriteToken(ctx, recoveryToken)

		if s.logger != nil {
			s.logger.Infof("ğŸ”§ è‡ªçœä¿®å¤ï¼šå·²å¯ç”¨æ¢å¤æ¨¡å¼ï¼ˆå…è®¸åœ¨åªè¯»æ¨¡å¼ä¸‹å†™å…¥ï¼‰")
		}
	}

	// 1) æ¸…ç†å¯é‡å»ºçŠ¶æ€
	if err := s.clearReorgStateForGenesisRebuild(ctx); err != nil {
		return fmt.Errorf("è‡ªçœä¿®å¤ï¼šé‡å»ºå‰çŠ¶æ€æ¸…ç†å¤±è´¥: %w", err)
	}

	// 2) é‡æ”¾ genesis
	genesis, err := s.queryService.GetBlockByHeight(ctx, 0)
	if err != nil {
		return fmt.Errorf("è‡ªçœä¿®å¤ï¼šè¯»å– genesis å¤±è´¥: %w", err)
	}
	if genesis == nil || genesis.Header == nil || genesis.Header.Height != 0 {
		return fmt.Errorf("è‡ªçœä¿®å¤ï¼šgenesis æ— æ•ˆæˆ–ç¼ºå¤±")
	}
	// âœ… ç°åœ¨å¯ä»¥å†™å…¥ genesisï¼Œå› ä¸ºæŒæœ‰ recovery token
	if err := s.blockProcessor.ProcessBlock(ctx, genesis); err != nil {
		return fmt.Errorf("è‡ªçœä¿®å¤ï¼šå†™å…¥ genesis å¤±è´¥: %w", err)
	}

	// 3) é‡æ”¾æœ¬åœ°ä¸»é“¾å‰ç¼€ï¼ˆ1..forkHeightï¼‰
	for h := uint64(1); h <= forkHeight; h++ {
		blk, err := s.queryService.GetBlockByHeight(ctx, h)
		if err != nil {
			return fmt.Errorf("è‡ªçœä¿®å¤ï¼šè¯»å–æœ¬åœ°ä¸»é“¾åŒºå—å¤±è´¥: height=%d err=%w", h, err)
		}
		if blk == nil || blk.Header == nil || blk.Header.Height != h {
			return fmt.Errorf("è‡ªçœä¿®å¤ï¼šæœ¬åœ°ä¸»é“¾åŒºå—ç¼ºå¤±/æŸå: height=%d", h)
		}
		if err := s.blockProcessor.ProcessBlock(ctx, blk); err != nil {
			return fmt.Errorf("è‡ªçœä¿®å¤ï¼šé‡æ”¾æœ¬åœ°ä¸»é“¾åŒºå—å¤±è´¥: height=%d err=%w", h, err)
		}
	}

	// 4) é‡æ”¾åˆ†å‰æ®µï¼ˆforkHeight+1..newTipï¼‰
	for h := forkHeight + 1; h <= newTip.Header.Height; h++ {
		blk, ok := provider(h)
		if !ok || blk == nil || blk.Header == nil || blk.Header.Height != h {
			return fmt.Errorf("è‡ªçœä¿®å¤ï¼šç¼ºå¤±åˆ†å‰æ®µåŒºå—: height=%d", h)
		}
		if err := s.blockProcessor.ProcessBlock(ctx, blk); err != nil {
			return fmt.Errorf("è‡ªçœä¿®å¤ï¼šé‡æ”¾åˆ†å‰æ®µåŒºå—å¤±è´¥: height=%d err=%w", h, err)
		}
	}

	// ğŸ”§ æˆåŠŸåæ˜¾å¼å…³é—­ Recovery Mode
	if recoveryEnabled && s.writeGate != nil {
		if err := s.writeGate.DisableRecoveryMode(recoveryToken); err != nil {
			if s.logger != nil {
				s.logger.Warnf("å…³é—­æ¢å¤æ¨¡å¼å¤±è´¥: %v", err)
			}
		}
		recoveryEnabled = false

		if s.logger != nil {
			s.logger.Infof("âœ… è‡ªçœä¿®å¤ï¼šå·²å…³é—­æ¢å¤æ¨¡å¼")
		}
	}

	return nil
}

func (s *Service) switchChainWithProvider(
	ctx context.Context,
	forkBlock *core.Block,
	forkHeight uint64,
	provider func(height uint64) (*core.Block, bool),
) error {
	if forkBlock == nil || forkBlock.Header == nil {
		return fmt.Errorf("forkBlock ä¸èƒ½ä¸ºç©º")
	}
	if s == nil || s.queryService == nil || s.blockProcessor == nil || s.utxoSnapshot == nil || s.store == nil {
		return fmt.Errorf("ä¾èµ–æœªæ³¨å…¥ï¼ˆqueryService/blockProcessor/utxoSnapshot/storeï¼‰")
	}

	chainInfo, err := s.queryService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}
	currentHeight := chainInfo.Height

	// tx-recoveryï¼ˆä¸¥æ ¼ç‰ˆï¼‰ï¼šé¢„æ”¶é›†è¢«æŠ›å¼ƒä¸»é“¾æ®µ(forkHeight+1..currentHeight)ä¸Šçš„å¯å›æ”¶äº¤æ˜“ï¼Œ
	// å¹¶åœ¨ reorg æˆåŠŸåå›æ³¨åˆ° mempoolã€‚
	var recoveredTxs []*transaction.Transaction
	if s.txPool != nil && currentHeight > forkHeight {
		for h := forkHeight + 1; h <= currentHeight; h++ {
			blk, err := s.queryService.GetBlockByHeight(ctx, h)
			if err != nil || blk == nil || blk.Body == nil {
				continue
			}
			for _, tx := range blk.Body.Transactions {
				if tx == nil {
					continue
				}
				// è·³è¿‡ 0-input äº¤æ˜“ï¼ˆcoinbase/åˆ›ä¸–ç±»ï¼‰ï¼Œä¸å›æ³¨
				if len(tx.Inputs) == 0 {
					continue
				}
				recoveredTxs = append(recoveredTxs, tx)
			}
		}
	}

	doTxRecovery := func(newTip *core.Block) {
		if s.txPool == nil || len(recoveredTxs) == 0 {
			return
		}
		if newTip != nil && newTip.Header != nil {
			_ = s.txPool.SyncStatus(newTip.Header.Height, newTip.Header.StateRoot)
		}
		var okCnt, failCnt int
		for _, tx := range recoveredTxs {
			if tx == nil {
				continue
			}
			if _, err := s.txPool.SubmitTx(tx); err != nil {
				failCnt++
				continue
			}
			okCnt++
		}
		if s.logger != nil {
			s.logger.Infof("âœ… tx-recovery å®Œæˆï¼šsubmitted=%d failed=%d detached_total=%d", okCnt, failCnt, len(recoveredTxs))
		}
	}

	// ç‰¹åˆ¤ï¼šforkHeight=0 ä»ä½¿ç”¨ genesis é‡å»ºï¼ˆä¸¥æ ¼è¯­ä¹‰ï¼š0 å¿«ç…§åœ¨é0é“¾å°–ä¸‹ä¼šæˆä¸ºä¼ªå¿«ç…§ï¼‰
	if forkHeight == 0 {
		if s.logger != nil {
			s.logger.Warnf("ğŸ” REORG(genesis): é‡‡ç”¨ genesis é‡å»ºè·¯å¾„ï¼ˆæ¸…ç†UTXO/ç´¢å¼•å¹¶ä»0é¡ºåºå†™å…¥åˆ° new_tip=%dï¼‰", forkBlock.Header.Height)
		}
		if err := s.clearReorgStateForGenesisRebuild(ctx); err != nil {
			return fmt.Errorf("genesis é‡å»ºå‰çŠ¶æ€æ¸…ç†å¤±è´¥: %w", err)
		}
		if err := s.rebuildChainFromGenesis(ctx, forkBlock, provider); err != nil {
			return fmt.Errorf("genesis é‡å»ºå¤±è´¥: %w", err)
		}
		doTxRecovery(forkBlock)
		return nil
	}

	// å…¨å±€å†™é—¨é—¸ï¼šå¼€å¯ reorg å†™å›´æ ï¼ˆåªæœ‰æºå¸¦ token çš„å†™è·¯å¾„å…è®¸å†™å…¥ï¼‰
	var fenceToken string
	var fenceEnabled bool
	if s.writeGate != nil {
		tok, err := s.writeGate.EnableWriteFence("reorg")
		if err != nil {
			return err
		}
		fenceToken = tok
		fenceEnabled = true
		defer func() {
			if fenceEnabled {
				_ = s.writeGate.DisableWriteFence(fenceToken)
			}
		}()
		ctx = writegate.WithWriteToken(ctx, fenceToken)
	}

	// providerï¼šå¿…é¡»è¦†ç›– forkHeight+1..newTip
	reorgProvider := func(height uint64) (*core.Block, bool) {
		if height == forkBlock.Header.Height {
			return forkBlock, true
		}
		if provider != nil {
			if blk, ok := provider(height); ok && blk != nil && blk.Header != nil && blk.Header.Height == height {
				return blk, true
			}
		}
		blk, err := s.queryService.GetBlockByHeight(ctx, height)
		if err != nil || blk == nil || blk.Header == nil || blk.Header.Height != height {
			return nil, false
		}
		return blk, true
	}

	// æ„é€ åè°ƒå™¨ï¼ˆå°†æµç¨‹æ”¶å£åˆ° Coordinatorï¼‰
	snapshotMgr := managers.NewSnapshotManager(s.utxoSnapshot)
	indexMgr := managers.NewIndexManager(func(ctx context.Context, height uint64) error {
		// rollback-plan-refactorï¼šç´¢å¼•å›æ»šå¿…é¡»èµ°â€œé¢„æ”¶é›†è®¡åˆ’ + äº‹åŠ¡å†…æ‰§è¡Œâ€
		return s.RollbackIndicesToHeight(ctx, height)
	})
	verifyFn := func(ctx context.Context, expectedHeight uint64) (*reorg.VerificationResult, error) {
		v, err := NewReorgValidator(s.store, s.queryService, s.txHashClient, s.logger)
		if err != nil {
			return nil, err
		}
		if err := v.VerifyReorgResult(ctx, expectedHeight); err != nil {
			return &reorg.VerificationResult{
				Passed: false,
				Checks: []reorg.CheckResult{
					{Name: "ForkValidator:VerifyReorgResult", Passed: false, Expected: fmt.Sprintf("height=%d", expectedHeight), Actual: "failed", Details: err.Error()},
				},
			}, err
		}
		return &reorg.VerificationResult{
			Passed: true,
			Checks: []reorg.CheckResult{
				{Name: "ForkValidator:VerifyReorgResult", Passed: true, Expected: fmt.Sprintf("height=%d", expectedHeight), Actual: "ok", Details: "éªŒè¯é€šè¿‡"},
			},
		}, nil
	}
	enterReadOnlyFn := func(ctx context.Context, reason error) {
		if reason == nil {
			reason = fmt.Errorf("unknown reorg failure")
		}
		_ = s.enterReadOnlyMode(ctx, reason.Error())
	}

	// atomic-rollback-single-txï¼šä¸¥æ ¼åŸå­åŒ– Phase2ï¼ˆå•äº‹åŠ¡ï¼‰
	// ğŸ†• ä¼˜åŒ–ï¼šå½“UTXOæ•°é‡è¾ƒå¤§æ—¶ï¼Œä½¿ç”¨åˆ†æ‰¹æ¢å¤é¿å…"Txn is too big"é”™è¯¯
	atomicRollbackFn := func(ctx context.Context, session *reorg.ReorgSession) error {
		if session == nil {
			return fmt.Errorf("session ä¸èƒ½ä¸ºç©º")
		}
		rollbackSnap, err := snapshotMgr.SnapshotForHandle(session.Handles["utxo_rollback"])
		if err != nil {
			return err
		}
		indexPlan, err := s.BuildIndexRollbackPlan(ctx, session.ForkHeight)
		if err != nil {
			return err
		}
		clearPlan, err := s.utxoSnapshot.BuildClearPlan(ctx)
		if err != nil {
			return err
		}
		payload, err := s.utxoSnapshot.LoadSnapshotPayload(ctx, rollbackSnap)
		if err != nil {
			return err
		}

		// ğŸ†• åˆ¤æ–­æ˜¯å¦éœ€è¦åˆ†æ‰¹æ¢å¤ï¼ˆé˜ˆå€¼ï¼š1000ä¸ªUTXOï¼‰
		// TODO: ä»é…ç½®ä¸­è¯»å–é˜ˆå€¼
		utxoCount := len(payload.Utxos)
		useBatching := utxoCount > 1000

		if useBatching {
			// åˆ†æ‰¹æ¢å¤æ¨¡å¼ï¼šç´¢å¼•å›æ»šåœ¨ç¬¬ä¸€ä¸ªäº‹åŠ¡ï¼ŒUTXOæ¢å¤åˆ†å¤šä¸ªäº‹åŠ¡
			if s.logger != nil {
				s.logger.Infof("ğŸ”„ ä½¿ç”¨åˆ†æ‰¹æ¢å¤æ¨¡å¼: UTXOæ•°é‡=%d", utxoCount)
			}

			// 1) ç´¢å¼•å›æ»šï¼ˆå•ç‹¬äº‹åŠ¡ï¼‰
			err := s.store.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
				return s.ApplyIndexRollbackPlanInTx(tx, indexPlan)
			})
			if err != nil {
				return fmt.Errorf("ç´¢å¼•å›æ»šå¤±è´¥: %w", err)
			}

			// 2) UTXOæ¢å¤ï¼ˆåˆ†æ‰¹äº‹åŠ¡ï¼‰
			if err := s.utxoSnapshot.RestoreSnapshotWithBatching(ctx, rollbackSnap, payload, clearPlan); err != nil {
				return fmt.Errorf("UTXOåˆ†æ‰¹æ¢å¤å¤±è´¥: %w", err)
			}

			return nil
		}

		// åŸå­æ¨¡å¼ï¼šå•äº‹åŠ¡å®Œæˆæ‰€æœ‰æ“ä½œï¼ˆé€‚ç”¨äºå°è§„æ¨¡UTXOï¼‰
		return s.store.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
			// 1) ç´¢å¼•å›æ»šï¼ˆåˆ é™¤è®¡åˆ’ + tip æ›´æ–°ï¼‰
			if err := s.ApplyIndexRollbackPlanInTx(tx, indexPlan); err != nil {
				return err
			}
			// 2) UTXO æ¢å¤ï¼ˆæ¸…ç©ºæ—§UTXO/ç´¢å¼•/å¼•ç”¨ + å†™å…¥å¿«ç…§UTXO + é‡å»ºç´¢å¼• + æ›´æ–° rootï¼‰
			if err := s.utxoSnapshot.RestoreSnapshotInTransaction(ctx, tx, rollbackSnap, payload, clearPlan); err != nil {
				return err
			}
			return nil
		})
	}

	// åˆ›å»ºäº‹ä»¶å‘å¸ƒå™¨ï¼ˆç”¨äºå‘å¸ƒ REORG é˜¶æ®µäº‹ä»¶å’Œè¡¥å¿äº‹ä»¶ï¼‰
	eventPublisher := reorg.NewEventPublisher(s.eventBus)

	coord, err := reorg.NewCoordinator(reorg.Options{
		Logger:           s.logger,
		QueryService:     s.queryService,
		BlockProcessor:   s.blockProcessor,
		SnapshotManager:  snapshotMgr,
		IndexManager:     indexMgr,
		VerifyFn:         verifyFn,
		AtomicRollbackFn: atomicRollbackFn,
		EnterReadOnlyFn:  enterReadOnlyFn,
		EventPublisher:   eventPublisher,
	})
	if err != nil {
		return err
	}

	session, err := coord.BeginReorg(ctx, currentHeight, forkHeight, forkBlock.Header.Height)
	if err != nil {
		return err
	}
	if err := coord.ExecuteReorg(ctx, session, reorgProvider); err != nil {
		// âœ… å…œåº•ç­–ç•¥ï¼ˆç”Ÿäº§çº§ï¼‰ï¼šå½“ reorg å› å¿«ç…§/å›æ»šé˜¶æ®µå¤±è´¥ä¸”æˆ‘ä»¬æ‹¥æœ‰â€œå¤–éƒ¨åˆ†å‰æ®µ providerâ€æ—¶ï¼Œ
		// èµ°â€œè‡ªçœé‡å»ºâ€è·¯å¾„ï¼š
		// - æ¸…ç†å¯é‡å»ºçŠ¶æ€ï¼ˆUTXO/ç´¢å¼•/é“¾å°–ï¼‰
		// - é‡æ”¾æœ¬åœ°ä¸»é“¾å‰ç¼€ 0..forkHeight
		// - å†é‡æ”¾ provider æä¾›çš„åˆ†å‰æ®µ forkHeight+1..newTip
		//
		// è¯´æ˜ï¼š
		// - è¯¥å…œåº•ä»…åœ¨ provider!=nil æ—¶å¯ç”¨ï¼Œé¿å…åœ¨ç¼ºå¤±åˆ†å‰æ®µæ—¶é”™è¯¯åœ°ç”¨æœ¬åœ°ä¸»é“¾åŒºå—â€œå†’å……â€åˆ†å‰æ®µã€‚
		// - è¯¥å…œåº•æ¯”å¿«ç…§æ…¢ï¼Œä½†ç¡®å®šæ€§å¼ºï¼Œå¯é¿å…èŠ‚ç‚¹é•¿æœŸå¡åœ¨â€œå¿…å¤±è´¥ reorgâ€çŠ¶æ€ã€‚
		if provider != nil && shouldFallbackToSelfRebuild(err) {
			if s.logger != nil {
				s.logger.Warnf("âš ï¸ REORG å¤±è´¥ï¼Œå°è¯•èµ°è‡ªçœé‡å»ºå…œåº•: forkHeight=%d newTip=%d err=%v",
					forkHeight, forkBlock.Header.Height, err)
			}
			fallbackProvider := func(height uint64) (*core.Block, bool) {
				if height == forkBlock.Header.Height {
					return forkBlock, true
				}
				blk, ok := provider(height)
				if !ok || blk == nil || blk.Header == nil || blk.Header.Height != height {
					return nil, false
				}
				return blk, true
			}
			if ferr := s.rebuildChainByLocalPrefixAndForkProvider(ctx, forkHeight, forkBlock, fallbackProvider); ferr == nil {
				// è‡ªçœé‡å»ºæˆåŠŸï¼šå…ˆè§£é™¤å†™å›´æ ï¼Œå†è¿›è¡Œ tx-recovery
				if fenceEnabled && s.writeGate != nil {
					_ = s.writeGate.DisableWriteFence(fenceToken)
					fenceEnabled = false
				}
				doTxRecovery(forkBlock)
				return nil
			} else if s.logger != nil {
				s.logger.Errorf("âŒ è‡ªçœé‡å»ºå…œåº•å¤±è´¥: forkHeight=%d newTip=%d err=%v",
					forkHeight, forkBlock.Header.Height, ferr)
			}
		}
		return err
	}
	// reorg å·²å®Œæˆï¼šå…ˆè§£é™¤å†™å›´æ ï¼Œå†è¿›è¡Œ tx-recoveryï¼ˆTxPool å†™è·¯å¾„æ—  token è¯­ä¹‰ï¼‰
	if fenceEnabled && s.writeGate != nil {
		_ = s.writeGate.DisableWriteFence(fenceToken)
		fenceEnabled = false
	}
	doTxRecovery(forkBlock)
	return nil
}

// shouldFallbackToSelfRebuild åˆ¤æ–­ä¸€æ¬¡ reorg å¤±è´¥æ˜¯å¦åº”è§¦å‘â€œè‡ªçœé‡å»ºâ€å…œåº•ã€‚
//
// åŸåˆ™ï¼š
// - ä»…å¯¹ Prepare/Rollback é˜¶æ®µå¤±è´¥å¯ç”¨ï¼ˆé€šå¸¸ä¸ºå¿«ç…§åˆ›å»º/æ¢å¤å¤±è´¥ã€ç´¢å¼•/UTXO åŸå­å›æ»šå¤±è´¥ï¼‰ã€‚
// - é€šè¿‡ç»“æ„åŒ–é”™è¯¯ + å…³é”®å­—è¿›è¡Œä¿å®ˆåˆ¤æ–­ï¼Œé¿å…å¯¹ Replay/Verify å¤±è´¥è¯¯è§¦å‘ï¼ˆé‚£é€šå¸¸æ„å‘³ç€åˆ†å‰æ®µæœ¬èº«æ— æ•ˆï¼‰ã€‚
func shouldFallbackToSelfRebuild(err error) bool {
	if err == nil {
		return false
	}
	var re *reorg.ReorgError
	if errors.As(err, &re) {
		if re.Phase != reorg.PhasePrepare && re.Phase != reorg.PhaseRollback {
			return false
		}
	}
	msg := err.Error()
	// å…³é”®å­—è¦†ç›–ï¼šå¿«ç…§/UTXO æ¢å¤/ç´¢å¼•å›æ»š/å“ˆå¸Œæ ¡éªŒç­‰
	switch {
	case strings.Contains(msg, "snapshot"),
		strings.Contains(msg, "å¿«ç…§"),
		strings.Contains(msg, "RestoreSnapshot"),
		strings.Contains(msg, "CreateSnapshot"),
		strings.Contains(msg, "utxo"),
		strings.Contains(msg, "UTXO"),
		strings.Contains(msg, "state_root"),
		strings.Contains(msg, "BlockHeight"):
		return true
	default:
		return false
	}
}

// ============================================================================
//                              å†³ç­–é€»è¾‘
// ============================================================================

// shouldSwitchChain åˆ¤æ–­æ˜¯å¦åº”è¯¥åˆ‡æ¢åˆ°åˆ†å‰é“¾
//
// å†³ç­–è§„åˆ™ï¼š
// - å¦‚æœåˆ†å‰é“¾çš„ç´¯ç§¯éš¾åº¦æ›´å¤§ï¼Œåˆ™åˆ‡æ¢
// - å¦‚æœç´¯ç§¯éš¾åº¦ç›¸åŒï¼Œæ¯”è¾ƒåŒºå—æ•°é‡
// - å¦‚æœåŒºå—æ•°é‡ç›¸åŒï¼Œç¡®å®šæ€§ tie-breakï¼štip hash æ›´å°çš„ä¼˜å…ˆï¼ˆæŒ‰å›ºå®šå­—èŠ‚åºæ¯”è¾ƒï¼‰
func (s *Service) shouldSwitchChain(mainChain, forkChain *types.ChainWeight) bool {
	// 1. æ¯”è¾ƒç´¯ç§¯éš¾åº¦
	if forkChain.CumulativeDifficulty.Cmp(mainChain.CumulativeDifficulty) > 0 {
		return true
	}

	if forkChain.CumulativeDifficulty.Cmp(mainChain.CumulativeDifficulty) < 0 {
		return false
	}

	// 2. ç´¯ç§¯éš¾åº¦ç›¸åŒï¼Œæ¯”è¾ƒåŒºå—æ•°é‡
	if forkChain.BlockCount > mainChain.BlockCount {
		return true
	}

	if forkChain.BlockCount < mainChain.BlockCount {
		return false
	}

	// 3. åŒºå—æ•°é‡ç›¸åŒï¼Œç¡®å®šæ€§ tie-breakï¼štip hash æ›´å°çš„ä¼˜å…ˆ
	//
	// è¯´æ˜ï¼š
	// - æ—§å®ç°ä½¿ç”¨ LastBlockTime ä½œä¸ºæœ€ç»ˆè£å†³ï¼Œä½†è¯¥å­—æ®µå¯è¢«çŸ¿å·¥æ“çºµï¼ˆå¾®è°ƒæ—¶é—´æˆ³ï¼‰ï¼Œå¹¶å¯èƒ½å¯¼è‡´å…¨ç½‘ä¸æ”¶æ•›ï¼›
	// - ä»¥ tip hash çš„å›ºå®šå­—èŠ‚åºæ¯”è¾ƒä½œä¸º tie-breakï¼Œèƒ½ä¿è¯ä¸åŒèŠ‚ç‚¹åœ¨ç›¸åŒä¿¡æ¯ä¸‹åšå‡ºä¸€è‡´é€‰æ‹©ã€‚
	if len(forkChain.TipHash) > 0 || len(mainChain.TipHash) > 0 {
		return bytes.Compare(forkChain.TipHash, mainChain.TipHash) < 0
	}

	// å‘åå…¼å®¹ï¼šè‹¥æœªæä¾› tip hashï¼Œé€€åŒ–ä¸ºæ—§è§„åˆ™ï¼ˆæ›´æ—©æ—¶é—´æˆ³ä¼˜å…ˆï¼‰
	return forkChain.LastBlockTime < mainChain.LastBlockTime
}
