// Package health æä¾›é“¾å¥åº·æ£€æŸ¥åŠŸèƒ½
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - å¯åŠ¨æ—¶å¿«é€Ÿæ£€æŸ¥é“¾å°–å’Œæœ€è¿‘åŒºå—
// - åå°æ·±åº¦æ‰«æå…¨é“¾å¥åº·çŠ¶æ€
// - è‡ªåŠ¨è§¦å‘ä¿®å¤æµç¨‹
//
// ğŸ“‹ **æ£€æŸ¥é¡¹**ï¼š
// - Tipä¸€è‡´æ€§ï¼šstate:chain:tipä¸å®é™…åŒºå—hash
// - ç´¢å¼•å®Œæ•´æ€§ï¼šheightâ†”hashæ˜ å°„ã€TXç´¢å¼•
// - åŒºå—æ—¶é—´æˆ³è¿ç»­æ€§
// - UTXO-Blockä¸€è‡´æ€§
package health

import (
	"bytes"
	"context"
	"encoding/binary"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	logiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
)

// ============================================================================
//                              æ•°æ®ç»“æ„
// ============================================================================

// ChainHealthChecker é“¾å¥åº·æ£€æŸ¥å™¨
type ChainHealthChecker struct {
	queryService persistence.QueryService
	blockQuery   persistence.BlockQuery
	blockHasher  core.BlockHashServiceClient
	store        storage.BadgerStore
	fileStore    storage.FileStore
	recoveryMgr  RecoveryManagerInterface
	logger       logiface.Logger
	config       HealthCheckConfig
}

// RecoveryManagerInterface æ¢å¤ç®¡ç†å™¨æ¥å£
type RecoveryManagerInterface interface {
	RepairWithStrategy(ctx context.Context, issue CorruptionIssue) error
	GetRepairHistory() []RepairRecord
}

// CorruptionIssue æŸåé—®é¢˜ï¼ˆä¸recoveryåŒ…ä¿æŒä¸€è‡´ï¼‰
type CorruptionIssue struct {
	Type        string
	Severity    string
	Height      *uint64
	Description string
	RawError    error
}

// RepairRecord ä¿®å¤è®°å½•ï¼ˆä¸recoveryåŒ…ä¿æŒä¸€è‡´ï¼‰
type RepairRecord struct {
	Timestamp   time.Time
	IssueType   string
	Severity    string
	Height      *uint64
	RepairLevel string
	Result      string
	Duration    time.Duration
	Error       string
}

// HealthCheckConfig å¥åº·æ£€æŸ¥é…ç½®
type HealthCheckConfig struct {
	QuickCheckEnabled      bool // å¯ç”¨å¿«é€Ÿæ£€æŸ¥
	QuickCheckRecentBlocks int  // å¿«é€Ÿæ£€æŸ¥æœ€è¿‘Nä¸ªåŒºå—ï¼Œé»˜è®¤10
	DeepScanEnabled        bool // å¯ç”¨æ·±åº¦æ‰«æ
	DeepScanAsync          bool // åå°å¼‚æ­¥æ·±åº¦æ‰«æ
	AutoRepair             bool // å‘ç°é—®é¢˜è‡ªåŠ¨ä¿®å¤
}

// HealthReport å¥åº·æ£€æŸ¥æŠ¥å‘Š
type HealthReport struct {
	StartTime time.Time
	EndTime   time.Time
	CheckType string // "quick" | "deep"

	// æ£€æŸ¥ç»“æœ
	TipConsistent       bool
	RecentBlocksHealthy bool
	IndexIntegrity      bool
	BlockTimestampValid bool
	UTXOConsistent      bool

	// é—®é¢˜è¯¦æƒ…
	Issues             []HealthIssue
	AutoRepairedIssues []HealthIssue
	UnrepairableIssues []HealthIssue
}

// HealthIssue å¥åº·é—®é¢˜
type HealthIssue struct {
	Type        string // "tip_inconsistent", "timestamp_regression", etc.
	Severity    string // "critical", "high", "medium", "low"
	Height      *uint64
	Description string
	Repairable  bool
}

// ============================================================================
//                              æ„é€ å‡½æ•°
// ============================================================================

// NewChainHealthChecker åˆ›å»ºé“¾å¥åº·æ£€æŸ¥å™¨
func NewChainHealthChecker(
	queryService persistence.QueryService,
	blockQuery persistence.BlockQuery,
	blockHasher core.BlockHashServiceClient,
	store storage.BadgerStore,
	fileStore storage.FileStore,
	recoveryMgr RecoveryManagerInterface,
	logger logiface.Logger,
	config HealthCheckConfig,
) *ChainHealthChecker {
	// è®¾ç½®é»˜è®¤å€¼
	if config.QuickCheckRecentBlocks == 0 {
		config.QuickCheckRecentBlocks = 10
	}

	return &ChainHealthChecker{
		queryService: queryService,
		blockQuery:   blockQuery,
		blockHasher:  blockHasher,
		store:        store,
		fileStore:    fileStore,
		recoveryMgr:  recoveryMgr,
		logger:       logger,
		config:       config,
	}
}

// ============================================================================
//                              å¿«é€Ÿæ£€æŸ¥
// ============================================================================

// QuickCheck å¿«é€Ÿå¥åº·æ£€æŸ¥ï¼ˆ~1ç§’ï¼‰
//
// ğŸ¯ **æ£€æŸ¥é¡¹**ï¼š
// 1. é“¾å°–ä¸€è‡´æ€§
// 2. æœ€è¿‘Nä¸ªåŒºå—çš„ç´¢å¼•
// 3. æœ€è¿‘Nä¸ªåŒºå—çš„æ—¶é—´æˆ³
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//
// è¿”å›ï¼š
//   - *HealthReport: å¥åº·æ£€æŸ¥æŠ¥å‘Š
//   - error: æ£€æŸ¥å¤±è´¥çš„é”™è¯¯
func (c *ChainHealthChecker) QuickCheck(ctx context.Context) (*HealthReport, error) {
	startTime := time.Now()
	report := &HealthReport{
		StartTime:           startTime,
		CheckType:           "quick",
		TipConsistent:       true,
		RecentBlocksHealthy: true,
		IndexIntegrity:      true,
		BlockTimestampValid: true,
		UTXOConsistent:      true,
		Issues:              make([]HealthIssue, 0),
		AutoRepairedIssues:  make([]HealthIssue, 0),
		UnrepairableIssues:  make([]HealthIssue, 0),
	}

	if c.logger != nil {
		c.logger.Info("ğŸ” å¼€å§‹å¿«é€Ÿå¥åº·æ£€æŸ¥...")
	}

	// 1. æ£€æŸ¥é“¾å°–ä¸€è‡´æ€§
	c.checkTipConsistency(ctx, report)

	// 2. æ£€æŸ¥æœ€è¿‘Nä¸ªåŒºå—çš„ç´¢å¼•
	c.checkRecentBlocksIndex(ctx, report, c.config.QuickCheckRecentBlocks)

	// 3. æ£€æŸ¥æœ€è¿‘Nä¸ªåŒºå—çš„æ—¶é—´æˆ³
	c.checkRecentBlocksTimestamp(ctx, report, c.config.QuickCheckRecentBlocks)

	// 4. è§¦å‘è‡ªåŠ¨ä¿®å¤
	if c.config.AutoRepair && len(report.Issues) > 0 {
		c.autoRepair(ctx, report)
	}

	report.EndTime = time.Now()

	if c.logger != nil {
		c.logger.Infof("âœ… å¿«é€Ÿæ£€æŸ¥å®Œæˆ: å‘ç°é—®é¢˜=%d å·²ä¿®å¤=%d æ— æ³•ä¿®å¤=%d è€—æ—¶=%v",
			len(report.Issues), len(report.AutoRepairedIssues), len(report.UnrepairableIssues),
			report.EndTime.Sub(report.StartTime))
	}

	return report, nil
}

// ============================================================================
//                              æ·±åº¦æ‰«æ
// ============================================================================

// DeepScan æ·±åº¦å¥åº·æ‰«æï¼ˆå¯èƒ½æ•°åˆ†é’Ÿï¼‰
//
// ğŸ¯ **æ£€æŸ¥é¡¹**ï¼š
// 1. å…¨é‡ç´¢å¼•å®Œæ•´æ€§
// 2. å…¨é‡åŒºå—æ—¶é—´æˆ³
// 3. UTXO-Blockä¸€è‡´æ€§
// 4. äº¤æ˜“ç´¢å¼•å®Œæ•´æ€§
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//
// è¿”å›ï¼š
//   - *HealthReport: å¥åº·æ£€æŸ¥æŠ¥å‘Š
//   - error: æ£€æŸ¥å¤±è´¥çš„é”™è¯¯
func (c *ChainHealthChecker) DeepScan(ctx context.Context) (*HealthReport, error) {
	startTime := time.Now()
	report := &HealthReport{
		StartTime:           startTime,
		CheckType:           "deep",
		TipConsistent:       true,
		RecentBlocksHealthy: true,
		IndexIntegrity:      true,
		BlockTimestampValid: true,
		UTXOConsistent:      true,
		Issues:              make([]HealthIssue, 0),
		AutoRepairedIssues:  make([]HealthIssue, 0),
		UnrepairableIssues:  make([]HealthIssue, 0),
	}

	if c.logger != nil {
		c.logger.Info("ğŸ” å¼€å§‹æ·±åº¦å¥åº·æ‰«æ...")
	}

	// 1. æ£€æŸ¥é“¾å°–ä¸€è‡´æ€§
	c.checkTipConsistency(ctx, report)

	// 2. å…¨é‡ç´¢å¼•å®Œæ•´æ€§éªŒè¯
	c.verifyFullIndexIntegrity(ctx, report)

	// 3. å…¨é‡åŒºå—æ—¶é—´æˆ³æ‰«æ
	c.verifyAllBlocksTimestamp(ctx, report)

	// 4. UTXO-Blockä¸€è‡´æ€§ï¼ˆç®€åŒ–ç‰ˆï¼‰
	c.verifyUTXOBlockConsistency(ctx, report)

	// 5. äº¤æ˜“ç´¢å¼•å®Œæ•´æ€§
	c.verifyTxIndexIntegrity(ctx, report)

	// 6. è§¦å‘è‡ªåŠ¨ä¿®å¤
	if c.config.AutoRepair && len(report.Issues) > 0 {
		c.autoRepair(ctx, report)
	}

	report.EndTime = time.Now()

	if c.logger != nil {
		c.logger.Infof("âœ… æ·±åº¦æ‰«æå®Œæˆ: å‘ç°é—®é¢˜=%d å·²ä¿®å¤=%d æ— æ³•ä¿®å¤=%d è€—æ—¶=%v",
			len(report.Issues), len(report.AutoRepairedIssues), len(report.UnrepairableIssues),
			report.EndTime.Sub(report.StartTime))
	}

	return report, nil
}

// ============================================================================
//                              æ£€æŸ¥é€»è¾‘ï¼šTipä¸€è‡´æ€§
// ============================================================================

// checkTipConsistency æ£€æŸ¥é“¾å°–ä¸€è‡´æ€§
//
// ğŸ¯ **æ£€æŸ¥é€»è¾‘**ï¼š
// 1. è¯»å– state:chain:tip
// 2. è¯»å–å®é™…åŒºå—å¹¶è®¡ç®—hash
// 3. æ¯”è¾ƒstored hash vs actual hash
func (c *ChainHealthChecker) checkTipConsistency(ctx context.Context, report *HealthReport) {
	// 1. è¯»å–state:chain:tip
	tipData, err := c.store.Get(ctx, []byte("state:chain:tip"))
	if err != nil {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "tip_read_failed",
			Severity:    "critical",
			Description: fmt.Sprintf("è¯»å–é“¾å°–å¤±è´¥: %v", err),
			Repairable:  false,
		})
		return
	}

	if len(tipData) < 40 {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "tip_invalid_format",
			Severity:    "critical",
			Description: fmt.Sprintf("é“¾å°–æ•°æ®æ ¼å¼é”™è¯¯: len=%d", len(tipData)),
			Repairable:  true,
		})
		return
	}

	storedHeight := binary.BigEndian.Uint64(tipData[:8])
	storedHash := tipData[8:40]

	// 2. è¯»å–å®é™…åŒºå—å¹¶è®¡ç®—hash
	block, err := c.blockQuery.GetBlockByHeight(ctx, storedHeight)
	if err != nil {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "block_read_failed",
			Severity:    "critical",
			Height:      &storedHeight,
			Description: fmt.Sprintf("è¯»å–åŒºå—å¤±è´¥: %v", err),
			Repairable:  false,
		})
		return
	}

	if block == nil || block.Header == nil {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "block_nil",
			Severity:    "critical",
			Height:      &storedHeight,
			Description: "åŒºå—æ•°æ®ä¸ºç©º",
			Repairable:  false,
		})
		return
	}

	// è®¡ç®—å®é™…hash
	if c.blockHasher == nil {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "hash_compute_failed",
			Severity:    "high",
			Height:      &storedHeight,
			Description: "blockHasher æœªæ³¨å…¥ï¼Œæ— æ³•è®¡ç®—åŒºå—hash",
			Repairable:  false,
		})
		return
	}
	resp, err := c.blockHasher.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: block})
	if err != nil || resp == nil || !resp.IsValid || len(resp.Hash) == 0 {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "hash_compute_failed",
			Severity:    "high",
			Height:      &storedHeight,
			Description: fmt.Sprintf("è®¡ç®—åŒºå—hashå¤±è´¥: %v", err),
			Repairable:  false,
		})
		return
	}

	actualHash := resp.Hash

	// 3. æ¯”è¾ƒ
	if !bytes.Equal(storedHash, actualHash) {
		report.TipConsistent = false
		report.Issues = append(report.Issues, HealthIssue{
			Type:        "tip_inconsistent",
			Severity:    "critical",
			Height:      &storedHeight,
			Description: fmt.Sprintf("Tip hashä¸ä¸€è‡´: stored=%x actual=%x", storedHash[:6], actualHash[:6]),
			Repairable:  true,
		})

		if c.logger != nil {
			c.logger.Warnf("âš ï¸ Tipä¸ä¸€è‡´: height=%d stored=%x actual=%x",
				storedHeight, storedHash[:6], actualHash[:6])
		}
	}
}

// ============================================================================
//                              æ£€æŸ¥é€»è¾‘ï¼šæœ€è¿‘åŒºå—ç´¢å¼•
// ============================================================================

// checkRecentBlocksIndex æ£€æŸ¥æœ€è¿‘Nä¸ªåŒºå—çš„ç´¢å¼•
func (c *ChainHealthChecker) checkRecentBlocksIndex(ctx context.Context, report *HealthReport, recentN int) {
	chainInfo, err := c.queryService.GetChainInfo(ctx)
	if err != nil {
		if c.logger != nil {
			c.logger.Warnf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
		}
		return
	}

	currentHeight := chainInfo.Height
	fromHeight := uint64(0)
	if currentHeight > uint64(recentN) {
		fromHeight = currentHeight - uint64(recentN)
	}

	for height := fromHeight; height <= currentHeight; height++ {
		// æ£€æŸ¥ indices:height:{height}
		heightKey := []byte(fmt.Sprintf("indices:height:%d", height))
		val, err := c.store.Get(ctx, heightKey)
		if err != nil || len(val) == 0 {
			report.IndexIntegrity = false
			report.Issues = append(report.Issues, HealthIssue{
				Type:        "index_corrupt_height_index",
				Severity:    "high",
				Height:      &height,
				Description: fmt.Sprintf("é«˜åº¦ç´¢å¼•ç¼ºå¤±: %v", err),
				Repairable:  true,
			})
		}
	}
}

// ============================================================================
//                              æ£€æŸ¥é€»è¾‘ï¼šæœ€è¿‘åŒºå—æ—¶é—´æˆ³
// ============================================================================

// checkRecentBlocksTimestamp æ£€æŸ¥æœ€è¿‘Nä¸ªåŒºå—çš„æ—¶é—´æˆ³
func (c *ChainHealthChecker) checkRecentBlocksTimestamp(ctx context.Context, report *HealthReport, recentN int) {
	chainInfo, err := c.queryService.GetChainInfo(ctx)
	if err != nil {
		if c.logger != nil {
			c.logger.Warnf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
		}
		return
	}

	currentHeight := chainInfo.Height
	fromHeight := uint64(1) // ä»1å¼€å§‹ï¼Œéœ€è¦æ£€æŸ¥çˆ¶åŒºå—
	if currentHeight > uint64(recentN) {
		fromHeight = currentHeight - uint64(recentN)
	}

	for height := fromHeight; height <= currentHeight; height++ {
		// è¯»å–çˆ¶åŒºå—
		parentBlock, err := c.blockQuery.GetBlockByHeight(ctx, height-1)
		if err != nil {
			continue
		}

		// è¯»å–å­åŒºå—
		childBlock, err := c.blockQuery.GetBlockByHeight(ctx, height)
		if err != nil {
			continue
		}

		if parentBlock == nil || parentBlock.Header == nil || childBlock == nil || childBlock.Header == nil {
			continue
		}

		// æ£€æŸ¥æ—¶é—´æˆ³
		if childBlock.Header.Timestamp < parentBlock.Header.Timestamp {
			report.BlockTimestampValid = false
			report.Issues = append(report.Issues, HealthIssue{
				Type:     "timestamp_regression",
				Severity: "high",
				Height:   &height,
				Description: fmt.Sprintf("æ—¶é—´æˆ³å€’é€€: parent=%d child=%d",
					parentBlock.Header.Timestamp, childBlock.Header.Timestamp),
				Repairable: true,
			})

			if c.logger != nil {
				c.logger.Warnf("âš ï¸ æ—¶é—´æˆ³å€’é€€: height=%d parent=%d child=%d",
					height, parentBlock.Header.Timestamp, childBlock.Header.Timestamp)
			}
		}
	}
}

// ============================================================================
//                              æ·±åº¦æ‰«æï¼šå…¨é‡ç´¢å¼•å®Œæ•´æ€§
// ============================================================================

// verifyFullIndexIntegrity å…¨é‡ç´¢å¼•å®Œæ•´æ€§éªŒè¯
func (c *ChainHealthChecker) verifyFullIndexIntegrity(ctx context.Context, report *HealthReport) {
	chainInfo, err := c.queryService.GetChainInfo(ctx)
	if err != nil {
		if c.logger != nil {
			c.logger.Warnf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
		}
		return
	}

	maxHeight := chainInfo.Height

	if c.logger != nil {
		c.logger.Infof("éªŒè¯å…¨é‡ç´¢å¼•å®Œæ•´æ€§: [0..%d]", maxHeight)
	}

	// æ£€æŸ¥æ‰€æœ‰åŒºå—çš„ç´¢å¼•
	c.checkRecentBlocksIndex(ctx, report, int(maxHeight)+1)
}

// ============================================================================
//                              æ·±åº¦æ‰«æï¼šå…¨é‡æ—¶é—´æˆ³
// ============================================================================

// verifyAllBlocksTimestamp å…¨é‡åŒºå—æ—¶é—´æˆ³éªŒè¯
func (c *ChainHealthChecker) verifyAllBlocksTimestamp(ctx context.Context, report *HealthReport) {
	chainInfo, err := c.queryService.GetChainInfo(ctx)
	if err != nil {
		if c.logger != nil {
			c.logger.Warnf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
		}
		return
	}

	maxHeight := chainInfo.Height

	if c.logger != nil {
		c.logger.Infof("éªŒè¯å…¨é‡æ—¶é—´æˆ³: [0..%d]", maxHeight)
	}

	// æ£€æŸ¥æ‰€æœ‰åŒºå—çš„æ—¶é—´æˆ³
	c.checkRecentBlocksTimestamp(ctx, report, int(maxHeight)+1)
}

// ============================================================================
//                              æ·±åº¦æ‰«æï¼šUTXO-Blockä¸€è‡´æ€§
// ============================================================================

// verifyUTXOBlockConsistency UTXO-Blockä¸€è‡´æ€§éªŒè¯ï¼ˆç®€åŒ–ç‰ˆï¼‰
func (c *ChainHealthChecker) verifyUTXOBlockConsistency(ctx context.Context, report *HealthReport) {
	// TODO: å®ç°UTXO-Blockä¸€è‡´æ€§æ£€æŸ¥
	// è¿™éœ€è¦æ‰«æUTXOé›†ï¼ŒéªŒè¯æ¯ä¸ªUTXOçš„BlockHeightæ˜¯å¦å­˜åœ¨äºé“¾ä¸Š
	if c.logger != nil {
		c.logger.Debug("UTXO-Blockä¸€è‡´æ€§æ£€æŸ¥å·²è·³è¿‡ï¼ˆå¾…å®ç°ï¼‰")
	}
}

// ============================================================================
//                              æ·±åº¦æ‰«æï¼šTXç´¢å¼•å®Œæ•´æ€§
// ============================================================================

// verifyTxIndexIntegrity äº¤æ˜“ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼ˆç®€åŒ–ç‰ˆï¼‰
func (c *ChainHealthChecker) verifyTxIndexIntegrity(ctx context.Context, report *HealthReport) {
	// TODO: å®ç°TXç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥
	// è¿™éœ€è¦æ‰«ææ‰€æœ‰åŒºå—çš„äº¤æ˜“ï¼ŒéªŒè¯indices:txç´¢å¼•æ˜¯å¦å­˜åœ¨
	if c.logger != nil {
		c.logger.Debug("TXç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥å·²è·³è¿‡ï¼ˆå¾…å®ç°ï¼‰")
	}
}

// ============================================================================
//                              è‡ªåŠ¨ä¿®å¤
// ============================================================================

// autoRepair è‡ªåŠ¨ä¿®å¤æ£€æµ‹åˆ°çš„é—®é¢˜
func (c *ChainHealthChecker) autoRepair(ctx context.Context, report *HealthReport) {
	if c.recoveryMgr == nil {
		if c.logger != nil {
			c.logger.Warn("æ¢å¤ç®¡ç†å™¨æœªåˆå§‹åŒ–ï¼Œæ— æ³•è‡ªåŠ¨ä¿®å¤")
		}
		return
	}

	if c.logger != nil {
		c.logger.Infof("ğŸ”§ å¼€å§‹è‡ªåŠ¨ä¿®å¤: å…± %d ä¸ªé—®é¢˜", len(report.Issues))
	}

	for _, issue := range report.Issues {
		if !issue.Repairable {
			report.UnrepairableIssues = append(report.UnrepairableIssues, issue)
			continue
		}

		// è½¬æ¢ä¸ºCorruptionIssue
		corruptIssue := CorruptionIssue{
			Type:        issue.Type,
			Severity:    issue.Severity,
			Height:      issue.Height,
			Description: issue.Description,
		}

		// è§¦å‘ä¿®å¤
		if err := c.recoveryMgr.RepairWithStrategy(ctx, corruptIssue); err != nil {
			if c.logger != nil {
				c.logger.Errorf("ä¿®å¤å¤±è´¥: type=%s err=%v", issue.Type, err)
			}
			report.UnrepairableIssues = append(report.UnrepairableIssues, issue)
		} else {
			if c.logger != nil {
				c.logger.Infof("âœ… ä¿®å¤æˆåŠŸ: type=%s", issue.Type)
			}
			report.AutoRepairedIssues = append(report.AutoRepairedIssues, issue)
		}
	}

	if c.logger != nil {
		c.logger.Infof("è‡ªåŠ¨ä¿®å¤å®Œæˆ: æˆåŠŸ=%d å¤±è´¥=%d",
			len(report.AutoRepairedIssues), len(report.UnrepairableIssues))
	}
}

// ============================================================================
//                              è¾…åŠ©æ–¹æ³•
// ============================================================================

// GetConfig è·å–é…ç½®
func (c *ChainHealthChecker) GetConfig() HealthCheckConfig {
	return c.config
}
