package hash

import (
	"context"
	"crypto/subtle"
	"fmt"
	"time"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"google.golang.org/protobuf/proto"
)

// TransactionHashService äº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
//
// ğŸ¯ æ ¸å¿ƒèŒè´£ï¼š
// 1. æä¾›ç¡®å®šæ€§çš„äº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
// 2. å®ç°gRPC TransactionHashServiceæ¥å£
// 3. æ”¯æŒè°ƒè¯•ä¿¡æ¯å’Œæ€§èƒ½ç›‘æ§
// 4. ç¡®ä¿è·¨å¹³å°å“ˆå¸Œè®¡ç®—ä¸€è‡´æ€§
//
// ğŸ”§ æŠ€æœ¯ç‰¹ç‚¹ï¼š
// - ç¡®å®šæ€§ç®—æ³•ï¼šå›ºå®šä½¿ç”¨SHA-256
// - æ ‡å‡†åºåˆ—åŒ–ï¼šä½¿ç”¨Protobufè§„èŒƒåºåˆ—åŒ–
// - å­—æ®µæ§åˆ¶ï¼šç²¾ç¡®æ§åˆ¶å“ˆå¸Œè®¡ç®—åŒ…å«çš„å­—æ®µ
// - æ€§èƒ½ç›‘æ§ï¼šæä¾›å®é™…çš„è®¡ç®—æ—¶é—´ç»Ÿè®¡
type TransactionHashService struct {
	transaction.UnimplementedTransactionHashServiceServer
	hashManager crypto.HashManager
	logger      log.Logger
}

// NewTransactionHashService åˆ›å»ºäº¤æ˜“å“ˆå¸ŒæœåŠ¡å®ä¾‹
func NewTransactionHashService(hashManager crypto.HashManager, logger log.Logger) *TransactionHashService {
	return &TransactionHashService{
		hashManager: hashManager,
		logger:      logger,
	}
}

// ComputeHash è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆç¡®å®šæ€§å®ç°ï¼‰
//
// ğŸ¯ è®¾è®¡åŸåˆ™ï¼š
// 1. ç¡®å®šæ€§ï¼šç›¸åŒäº¤æ˜“åœ¨ä»»ä½•å¹³å°ä¸Šè®¡ç®—å‡ºç›¸åŒå“ˆå¸Œ
// 2. æ ‡å‡†åŒ–ï¼šä¸¥æ ¼æŒ‰ç…§protoè§„èŒƒåºåˆ—åŒ–
// 3. å­—æ®µæ§åˆ¶ï¼šç²¾ç¡®æ§åˆ¶åŒ…å«å’Œæ’é™¤çš„å­—æ®µ
// 4. æ€§èƒ½ç›‘æ§ï¼šå‡†ç¡®æµ‹é‡è®¡ç®—è€—æ—¶
func (ths *TransactionHashService) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest) (*transaction.ComputeHashResponse, error) {
	startTime := time.Now()

	if req == nil {
		return &transaction.ComputeHashResponse{
			IsValid: false,
		}, fmt.Errorf("è¯·æ±‚ä¸èƒ½ä¸ºç©º")
	}

	if req.Transaction == nil {
		return &transaction.ComputeHashResponse{
			IsValid: false,
		}, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}

	// åºåˆ—åŒ–äº¤æ˜“ï¼ˆç¡®å®šæ€§ï¼‰
	mo := proto.MarshalOptions{Deterministic: true}
	txBytes, err := mo.Marshal(req.Transaction)
	if err != nil {
		return &transaction.ComputeHashResponse{
			IsValid: false,
		}, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// è®¡ç®—SHA-256å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
	hash := ths.hashManager.SHA256(txBytes)

	response := &transaction.ComputeHashResponse{
		Hash:    hash,
		IsValid: true,
	}

	// å¦‚æœéœ€è¦è°ƒè¯•ä¿¡æ¯
	if req.IncludeDebugInfo {
		response.DebugInfo = &transaction.HashDebugInfo{
			CanonicalBytes:      txBytes,
			CanonicalLength:     uint64(len(txBytes)),
			SerializationMethod: "protobuf",
			IncludedFields: []string{
				"version", "inputs", "outputs", "nonce",
				"creation_timestamp", "validity_window", "fee_mechanism", "metadata", "chain_id",
			},
			ExcludedFields:       []string{"signatures", "unlocking_proof.signature", "unlocking_proof.multi_key_proof.signatures"},
			ComputationTimeNanos: uint64(time.Since(startTime).Nanoseconds()),
		}
	}

	return response, nil
}

// ValidateHash éªŒè¯äº¤æ˜“å“ˆå¸Œï¼ˆç¡®å®šæ€§ï¼‰
//
// ğŸ¯ éªŒè¯é€»è¾‘ï¼š
// 1. é‡æ–°è®¡ç®—äº¤æ˜“å“ˆå¸Œ
// 2. ä½¿ç”¨æ—¶é—´å®‰å…¨æ¯”è¾ƒé˜²æ­¢æ—¶åºæ”»å‡»
// 3. æä¾›è¯¦ç»†çš„éªŒè¯ç»“æœ
func (ths *TransactionHashService) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest) (*transaction.ValidateHashResponse, error) {
	if req == nil {
		return &transaction.ValidateHashResponse{
			IsValid: false,
		}, fmt.Errorf("éªŒè¯è¯·æ±‚ä¸èƒ½ä¸ºç©º")
	}

	// è®¡ç®—å®é™…å“ˆå¸Œ
	computeReq := &transaction.ComputeHashRequest{
		Transaction:      req.Transaction,
		IncludeDebugInfo: false, // éªŒè¯æ—¶ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	computeResp, err := ths.ComputeHash(ctx, computeReq)
	if err != nil {
		return &transaction.ValidateHashResponse{
			IsValid: false,
		}, fmt.Errorf("è®¡ç®—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ—¶é—´å®‰å…¨æ¯”è¾ƒï¼ˆé˜²æ­¢æ—¶åºæ”»å‡»ï¼‰
	isValid := subtle.ConstantTimeCompare(computeResp.Hash, req.ExpectedHash) == 1

	return &transaction.ValidateHashResponse{
		IsValid:      isValid,
		ComputedHash: computeResp.Hash,
		ExpectedHash: req.ExpectedHash,
		ErrorMessage: func() *string {
			if isValid {
				return nil
			}
			msg := "computed hash does not match expected hash"
			return &msg
		}(),
	}, nil
}

// ComputeTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œçš„ç®€åŒ–æ¥å£
// ç”¨äºä¸éœ€è¦gRPCæ¥å£çš„åœºæ™¯
func (ths *TransactionHashService) ComputeTransactionHash(tx *transaction.Transaction) ([]byte, error) {
	if tx == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}

	// åºåˆ—åŒ–äº¤æ˜“ï¼ˆç¡®å®šæ€§ï¼‰
	mo := proto.MarshalOptions{Deterministic: true}
	txBytes, err := mo.Marshal(tx)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// è®¡ç®—SHA-256å“ˆå¸Œ
	return ths.hashManager.SHA256(txBytes), nil
}
