// Package pow æä¾›POWï¼ˆå·¥ä½œé‡è¯æ˜ï¼‰éªŒè¯å¼•æ“å®ç°
//
// âœ… **éªŒè¯å¼•æ“ç»„ä»¶ (Validation Engine Component)**
//
// æœ¬æ–‡ä»¶ä¸“é—¨å®ç°POWéªŒè¯çš„æ ¸å¿ƒç®—æ³•ï¼Œä¸“æ³¨äºï¼š
// - éªŒè¯ç®—æ³•ï¼šå¿«é€Ÿçš„POWæœ‰æ•ˆæ€§éªŒè¯
// - æ€§èƒ½ä¼˜åŒ–ï¼šé«˜é€ŸéªŒè¯ã€ç¼“å­˜ä¼˜åŒ–ã€æ‰¹é‡å¤„ç†
// - å®‰å…¨æ£€æŸ¥ï¼šé˜²ç¯¡æ”¹éªŒè¯ã€å‚æ•°å®Œæ•´æ€§æ£€æŸ¥
// - ç”Ÿäº§çº§è´¨é‡ï¼šè¯¦ç»†é”™è¯¯ä¿¡æ¯ã€å®¡è®¡æ—¥å¿—ã€æŒ‡æ ‡ç»Ÿè®¡
//
// ğŸ¯ **èŒè´£è¾¹ç•Œ**ï¼š
// - ä¸“é—¨è´Ÿè´£åŒºå—å¤´çš„POWéªŒè¯
// - ä¸æ¶‰åŠæŒ–çŸ¿é€»è¾‘ï¼ˆç”±mining.goè´Ÿè´£ï¼‰
// - ä¸æ¶‰åŠéš¾åº¦è®¡ç®—ï¼ˆç”±difficulty.goè´Ÿè´£ï¼‰
// - ä¸æ¶‰åŠåŸºç¡€è®¾æ–½ç®¡ç†ï¼ˆç”±engine.goè´Ÿè´£ï¼‰
//
// ğŸ”§ **éªŒè¯ç‰¹ç‚¹**ï¼š
// - é‡‡ç”¨ä¸æŒ–çŸ¿å®Œå…¨ä¸€è‡´çš„å“ˆå¸Œç®—æ³•
// - é«˜æ•ˆçš„éš¾åº¦åˆ¤å®šç®—æ³•
// - å‚æ•°å®Œæ•´æ€§å’Œåˆç†æ€§æ£€æŸ¥
// - æ”¯æŒæ‰¹é‡éªŒè¯ä¼˜åŒ–
// - è¯¦ç»†çš„éªŒè¯å®¡è®¡æ—¥å¿—
//
// ğŸš€ **æ€§èƒ½ä¼˜åŒ–**ï¼š
// - å¿«é€Ÿå¤±è´¥ç­–ç•¥ï¼ˆå‚æ•°é¢„æ£€ï¼‰
// - å“ˆå¸Œè®¡ç®—ä¼˜åŒ–
// - å†…å­˜åˆ†é…æœ€å°åŒ–
// - CPUç¼“å­˜å‹å¥½çš„ç®—æ³•
//
// ğŸ”’ **å®‰å…¨ç‰¹æ€§**ï¼š
// - é˜²ç¯¡æ”¹æ£€æŸ¥
// - å‚æ•°è¾¹ç•ŒéªŒè¯
// - æº¢å‡ºä¿æŠ¤
// - æ¶æ„è¾“å…¥æ£€æµ‹
//
// ğŸ“ˆ **ç›‘æ§æŒ‡æ ‡**ï¼š
// - éªŒè¯æ¬¡æ•°ç»Ÿè®¡
// - éªŒè¯æˆåŠŸç‡
// - éªŒè¯è€—æ—¶ç»Ÿè®¡
// - é”™è¯¯ç±»å‹åˆ†ç±»
package pow

import (
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"google.golang.org/protobuf/proto"
)

// ValidationEngine ä¸“é—¨çš„éªŒè¯å¼•æ“ç»„ä»¶
//
// âœ… **éªŒè¯å¼•æ“ç»“æ„**ï¼š
// ä¸“æ³¨äºPOWéªŒè¯ç®—æ³•çš„å®ç°ï¼Œæä¾›é«˜æ•ˆçš„åŒºå—å¤´éªŒè¯æœåŠ¡ã€‚
// é‡‡ç”¨ç»„åˆæ¨¡å¼ä¾èµ–æ ¸å¿ƒå¼•æ“çš„åŸºç¡€è®¾æ–½ã€‚
//
// ğŸ“ **å­—æ®µè¯´æ˜**ï¼š
// - coreEngine: æ ¸å¿ƒå¼•æ“çš„å¼•ç”¨ï¼Œç”¨äºè®¿é—®åŸºç¡€è®¾æ–½
// - statistics: éªŒè¯ç»Ÿè®¡ä¿¡æ¯ï¼ˆæ€§èƒ½ç›‘æ§ï¼‰
//
// ğŸ¯ **è®¾è®¡åŸåˆ™**ï¼š
// - å•ä¸€èŒè´£ï¼šä¸“æ³¨éªŒè¯ç®—æ³•å®ç°
// - é«˜æ€§èƒ½ï¼šä¼˜åŒ–çš„éªŒè¯ç®—æ³•å’Œèµ„æºä½¿ç”¨
// - å®‰å…¨å¯é ï¼šä¸¥æ ¼çš„å‚æ•°éªŒè¯å’Œé”™è¯¯å¤„ç†
// - å¯ç›‘æ§ï¼šè¯¦ç»†çš„ç»Ÿè®¡å’Œå®¡è®¡ä¿¡æ¯
type ValidationEngine struct {
	coreEngine *Engine          // æ ¸å¿ƒå¼•æ“å¼•ç”¨
	statistics *ValidationStats // éªŒè¯ç»Ÿè®¡ä¿¡æ¯
}

// ValidationStats éªŒè¯ç»Ÿè®¡ä¿¡æ¯
//
// ğŸ“Š **éªŒè¯ç»Ÿè®¡ç»“æ„**ï¼š
// è®°å½•éªŒè¯è¿‡ç¨‹çš„æ€§èƒ½æŒ‡æ ‡å’Œç»Ÿè®¡æ•°æ®ï¼Œç”¨äºç›‘æ§å’Œåˆ†æã€‚
//
// ğŸ“ **å­—æ®µè¯´æ˜**ï¼š
// - TotalValidations: æ€»éªŒè¯æ¬¡æ•°
// - SuccessfulValidations: æˆåŠŸéªŒè¯æ¬¡æ•°
// - FailedValidations: å¤±è´¥éªŒè¯æ¬¡æ•°
// - TotalValidationTime: æ€»éªŒè¯è€—æ—¶
// - AverageValidationTime: å¹³å‡éªŒè¯è€—æ—¶
// - LastValidationTime: æœ€åéªŒè¯æ—¶é—´
// - ErrorCounts: é”™è¯¯ç±»å‹è®¡æ•°
//
// ğŸ¯ **ç»Ÿè®¡ç”¨é€”**ï¼š
// - éªŒè¯æ€§èƒ½ç›‘æ§
// - å®‰å…¨å®¡è®¡æ—¥å¿—
// - ç³»ç»Ÿå¥åº·æ£€æŸ¥
// - æ€§èƒ½ä¼˜åŒ–åˆ†æ
type ValidationStats struct {
	TotalValidations        uint64                 // æ€»éªŒè¯æ¬¡æ•°
	SuccessfulValidations   uint64                 // æˆåŠŸéªŒè¯æ¬¡æ•°
	FailedValidations       uint64                 // å¤±è´¥éªŒè¯æ¬¡æ•°
	TotalValidationTime     time.Duration          // æ€»éªŒè¯è€—æ—¶
	AverageValidationTime   time.Duration          // å¹³å‡éªŒè¯è€—æ—¶
	LastValidationTime      time.Time              // æœ€åéªŒè¯æ—¶é—´
	ErrorCounts             map[string]uint64      // é”™è¯¯ç±»å‹è®¡æ•°
}

// ValidationError éªŒè¯é”™è¯¯ç±»å‹
//
// ğŸš¨ **é”™è¯¯åˆ†ç±»å¸¸é‡**ï¼š
// å®šä¹‰å„ç§éªŒè¯é”™è¯¯çš„ç±»å‹ï¼Œç”¨äºé”™è¯¯ç»Ÿè®¡å’Œå¤„ç†ã€‚
const (
	ErrorInvalidHeader     = "invalid_header"      // æ— æ•ˆåŒºå—å¤´
	ErrorInvalidNonce      = "invalid_nonce"       // æ— æ•ˆnonce
	ErrorInvalidDifficulty = "invalid_difficulty"  // æ— æ•ˆéš¾åº¦
	ErrorHashCalculation   = "hash_calculation"    // å“ˆå¸Œè®¡ç®—é”™è¯¯
	ErrorDifficultyCheck   = "difficulty_check"    // éš¾åº¦æ£€æŸ¥å¤±è´¥
	ErrorSerialization     = "serialization"       // åºåˆ—åŒ–é”™è¯¯
)

// NewValidationEngine åˆ›å»ºéªŒè¯å¼•æ“å®ä¾‹
//
// ğŸš€ **æ„é€ å‡½æ•°**ï¼š
// åˆ›å»ºä¸“é—¨çš„éªŒè¯å¼•æ“ç»„ä»¶ï¼Œä¾èµ–æ ¸å¿ƒå¼•æ“æä¾›åŸºç¡€è®¾æ–½ã€‚
// åˆå§‹åŒ–éªŒè¯ç»Ÿè®¡å’Œé…ç½®å‚æ•°ã€‚
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - coreEngine: æ ¸å¿ƒå¼•æ“å®ä¾‹ï¼ˆä¸èƒ½ä¸ºnilï¼‰
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - *ValidationEngine: åˆå§‹åŒ–å¥½çš„éªŒè¯å¼•æ“
//   - error: åˆ›å»ºå¤±è´¥æ—¶çš„é”™è¯¯
//
// ğŸ’¡ **è®¾è®¡è¯´æ˜**ï¼š
// - é‡‡ç”¨ä¾èµ–æ³¨å…¥æ¨¡å¼æ¥æ”¶æ ¸å¿ƒå¼•æ“
// - åˆå§‹åŒ–ç»Ÿè®¡ä¿¡æ¯å’Œé”™è¯¯è®¡æ•°å™¨
// - éªŒè¯å¿…è¦çš„ä¾èµ–é¡¹
func NewValidationEngine(coreEngine *Engine) (*ValidationEngine, error) {
	if coreEngine == nil {
		return nil, fmt.Errorf("æ ¸å¿ƒå¼•æ“ä¸èƒ½ä¸ºç©º")
	}

	engine := &ValidationEngine{
		coreEngine: coreEngine,
		statistics: &ValidationStats{
			LastValidationTime: time.Now(),
			ErrorCounts:        make(map[string]uint64),
		},
	}

	// è®°å½•åˆå§‹åŒ–æ—¥å¿—
	coreEngine.GetLogger().Debug("éªŒè¯å¼•æ“ç»„ä»¶åˆå§‹åŒ–å®Œæˆ")

	return engine, nil
}

// VerifyBlockHeader éªŒè¯åŒºå—å¤´çš„POWæ˜¯å¦æœ‰æ•ˆ
//
// âœ… **æ ¸å¿ƒéªŒè¯ç®—æ³•**ï¼š
// å¿«é€ŸéªŒè¯åŒºå—å¤´çš„POWæ˜¯å¦æ»¡è¶³éš¾åº¦è¦æ±‚ï¼Œç”¨äºåŒºå—éªŒè¯ã€‚
// é‡‡ç”¨ä¸æŒ–çŸ¿å®Œå…¨ä¸€è‡´çš„ç®—æ³•ç¡®ä¿éªŒè¯çš„å‡†ç¡®æ€§ã€‚
//
// ğŸ“‹ **éªŒè¯æµç¨‹**ï¼š
// 1. å‚æ•°å®Œæ•´æ€§æ£€æŸ¥
// 2. åŸºç¡€å­—æ®µéªŒè¯
// 3. éš¾åº¦åˆç†æ€§éªŒè¯
// 4. nonceæœ‰æ•ˆæ€§æ£€æŸ¥
// 5. åºåˆ—åŒ–åŒºå—å¤´æ•°æ®
// 6. è®¡ç®—åŒé‡SHA256å“ˆå¸Œ
// 7. éªŒè¯å“ˆå¸Œéš¾åº¦è¦æ±‚
// 8. è®°å½•éªŒè¯ç»“æœå’Œç»Ÿè®¡
//
// ğŸ”„ **æ€§èƒ½ç‰¹ç‚¹**ï¼š
// - å¿«é€Ÿå¤±è´¥ç­–ç•¥ï¼ˆé¢„æ£€ä¼˜åŒ–ï¼‰
// - é«˜æ•ˆçš„å“ˆå¸Œè®¡ç®—
// - æœ€å°çš„å†…å­˜åˆ†é…
// - CPUç¼“å­˜å‹å¥½çš„å®ç°
//
// ğŸ”’ **å®‰å…¨æ£€æŸ¥**ï¼š
// - ä¸¥æ ¼çš„å‚æ•°è¾¹ç•ŒéªŒè¯
// - é˜²ç¯¡æ”¹å®Œæ•´æ€§æ£€æŸ¥
// - æ¶æ„è¾“å…¥æ£€æµ‹
// - æº¢å‡ºä¿æŠ¤æœºåˆ¶
//
// ğŸ“Š **å®¡è®¡åŠŸèƒ½**ï¼š
// - è¯¦ç»†çš„éªŒè¯æ—¥å¿—
// - é”™è¯¯ç±»å‹åˆ†ç±»ç»Ÿè®¡
// - æ€§èƒ½æŒ‡æ ‡è®°å½•
// - å®‰å…¨äº‹ä»¶è®°å½•
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - header: éœ€è¦éªŒè¯çš„åŒºå—å¤´ï¼ˆå¿…é¡»å®Œæ•´ä¸”æœ‰æ•ˆï¼‰
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - bool: trueè¡¨ç¤ºPOWéªŒè¯é€šè¿‡ï¼Œfalseè¡¨ç¤ºéªŒè¯å¤±è´¥
//   - error: éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼ˆå‚æ•°æ— æ•ˆã€è®¡ç®—é”™è¯¯ç­‰ï¼‰
//
// ğŸš¨ **é”™è¯¯ç±»å‹**ï¼š
// - å‚æ•°éªŒè¯é”™è¯¯ï¼šåŒºå—å¤´ä¸ºnilã€å­—æ®µç¼ºå¤±ç­‰
// - é€»è¾‘éªŒè¯é”™è¯¯ï¼šéš¾åº¦ä¸åˆç†ã€nonceæ ¼å¼é”™è¯¯ç­‰
// - è®¡ç®—é”™è¯¯ï¼šåºåˆ—åŒ–å¤±è´¥ã€å“ˆå¸Œè®¡ç®—å¤±è´¥ç­‰
// - ç»“æœéªŒè¯é”™è¯¯ï¼šå“ˆå¸Œä¸æ»¡è¶³éš¾åº¦è¦æ±‚
func (v *ValidationEngine) VerifyBlockHeader(header *core.BlockHeader) (bool, error) {
	// ==================== æ€§èƒ½ç›‘æ§å’Œæ—¥å¿— ====================
	
	startTime := time.Now()
	logger := v.coreEngine.GetLogger()
	
	// æ›´æ–°ç»Ÿè®¡è®¡æ•°
	v.statistics.TotalValidations++
	v.statistics.LastValidationTime = startTime
	
	logger.Debugf("å¼€å§‹éªŒè¯POWï¼ŒåŒºå—é«˜åº¦: %dï¼Œéš¾åº¦: %d", 
		header.GetHeight(), header.GetDifficulty())

	// ==================== å‚æ•°å®Œæ•´æ€§æ£€æŸ¥ ====================
	
	if header == nil {
		v.recordError(ErrorInvalidHeader)
		logger.Warnf("éªŒè¯å¤±è´¥: åŒºå—å¤´ä¸ºç©º")
		return false, fmt.Errorf("åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	// åŸºç¡€å­—æ®µéªŒè¯
	if header.Difficulty == 0 {
		v.recordError(ErrorInvalidDifficulty)
		logger.Warnf("éªŒè¯å¤±è´¥: éš¾åº¦ä¸ºé›¶ï¼Œé«˜åº¦: %d", header.Height)
		return false, fmt.Errorf("åŒºå—å¤´éš¾åº¦ä¸èƒ½ä¸ºé›¶")
	}

	if len(header.Nonce) == 0 {
		v.recordError(ErrorInvalidNonce)
		logger.Warnf("éªŒè¯å¤±è´¥: nonceä¸ºç©ºï¼Œé«˜åº¦: %d", header.Height)
		return false, fmt.Errorf("åŒºå—å¤´nonceä¸èƒ½ä¸ºç©º")
	}

	if len(header.Nonce) != 8 {
		v.recordError(ErrorInvalidNonce)
		logger.Warnf("éªŒè¯å¤±è´¥: nonceé•¿åº¦é”™è¯¯ï¼ŒæœŸæœ›8å­—èŠ‚ï¼Œå®é™…: %då­—èŠ‚ï¼Œé«˜åº¦: %d", 
			len(header.Nonce), header.Height)
		return false, fmt.Errorf("nonceé•¿åº¦å¿…é¡»ä¸º8å­—èŠ‚ï¼Œå®é™…é•¿åº¦: %d", len(header.Nonce))
	}

	// ==================== éš¾åº¦åˆç†æ€§éªŒè¯ ====================
	
	if err := v.coreEngine.ValidateDifficulty(header.Difficulty); err != nil {
		v.recordError(ErrorInvalidDifficulty)
		logger.Warnf("éªŒè¯å¤±è´¥: éš¾åº¦ä¸åˆç†ï¼Œé«˜åº¦: %dï¼Œéš¾åº¦: %dï¼Œé”™è¯¯: %v", 
			header.Height, header.Difficulty, err)
		return false, fmt.Errorf("éš¾åº¦éªŒè¯å¤±è´¥: %w", err)
	}

	// ==================== æ—¶é—´æˆ³åˆç†æ€§æ£€æŸ¥ ====================
	
	currentTime := time.Now().Unix()
	headerTime := int64(header.Timestamp)
	
	// åŒºå—æ—¶é—´ä¸èƒ½å¤ªè¶…å‰ï¼ˆæœ€å¤šå…è®¸2å°æ—¶ï¼‰
	if headerTime > currentTime+7200 {
		logger.Warnf("è­¦å‘Š: åŒºå—æ—¶é—´æˆ³è¿‡äºè¶…å‰ï¼Œé«˜åº¦: %dï¼ŒåŒºå—æ—¶é—´: %dï¼Œå½“å‰æ—¶é—´: %d", 
			header.Height, headerTime, currentTime)
		// æ³¨æ„ï¼šè¿™é‡Œåªè®°å½•è­¦å‘Šï¼Œä¸é˜»æ­¢éªŒè¯ï¼Œå› ä¸ºç½‘ç»œä¸­å¯èƒ½å­˜åœ¨æ—¶é—´åå·®
	}
	
	// åŒºå—æ—¶é—´ä¸èƒ½å¤ªè¿‡æ—¶ï¼ˆä¸èƒ½æ—©äºåˆ›ä¸–åŒºå—æ—¶é—´ï¼Œè¿™é‡Œä½¿ç”¨ä¸€ä¸ªåˆç†çš„æœ€å°æ—¶é—´ï¼‰
	minTime := int64(1600000000) // å¤§çº¦2020å¹´9æœˆçš„æ—¶é—´æˆ³
	if headerTime < minTime {
		logger.Warnf("è­¦å‘Š: åŒºå—æ—¶é—´æˆ³è¿‡äºä¹…è¿œï¼Œé«˜åº¦: %dï¼ŒåŒºå—æ—¶é—´: %d", 
			header.Height, headerTime)
	}

	// ==================== æ ¸å¿ƒå“ˆå¸ŒéªŒè¯ ====================

	// åºåˆ—åŒ–åŒºå—å¤´æ•°æ®
	headerData, err := proto.Marshal(header)
	if err != nil {
		v.recordError(ErrorSerialization)
		logger.Errorf("éªŒè¯å¤±è´¥: åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥ï¼Œé«˜åº¦: %dï¼Œé”™è¯¯: %v", 
			header.Height, err)
		return false, fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥: %w", err)
	}

	// è®¡ç®—åŒé‡SHA256å“ˆå¸Œ
	hashManager := v.coreEngine.GetHashManager()
	blockHash := hashManager.DoubleSHA256(headerData)
	
	if len(blockHash) == 0 {
		v.recordError(ErrorHashCalculation)
		logger.Errorf("éªŒè¯å¤±è´¥: å“ˆå¸Œè®¡ç®—è¿”å›ç©ºç»“æœï¼Œé«˜åº¦: %d", header.Height)
		return false, fmt.Errorf("å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šè¿”å›ç©ºç»“æœ")
	}

	// éªŒè¯å“ˆå¸Œæ˜¯å¦æ»¡è¶³éš¾åº¦è¦æ±‚
	isDifficultyValid := v.validateHashDifficulty(blockHash, header.Difficulty)
	
	// ==================== ç»“æœå¤„ç†å’Œç»Ÿè®¡ ====================
	
	elapsed := time.Since(startTime)
	v.statistics.TotalValidationTime += elapsed
	v.statistics.AverageValidationTime = time.Duration(
		int64(v.statistics.TotalValidationTime) / int64(v.statistics.TotalValidations))

	if isDifficultyValid {
		// éªŒè¯æˆåŠŸ
		v.statistics.SuccessfulValidations++
		
		logger.Debugf("âœ… POWéªŒè¯é€šè¿‡ï¼é«˜åº¦: %dï¼Œéš¾åº¦: %dï¼Œå“ˆå¸Œ: %xï¼Œè€—æ—¶: %v",
			header.Height, header.Difficulty, blockHash, elapsed)
		
		// è®°å½•è¯¦ç»†çš„æˆåŠŸä¿¡æ¯ï¼ˆä»…åœ¨è°ƒè¯•æ¨¡å¼ä¸‹ï¼‰
		if logger != nil {
			nonce, _ := GetNonceLE(header) // å¿½ç•¥é”™è¯¯ï¼Œå› ä¸ºå‰é¢å·²ç»éªŒè¯è¿‡
			logger.Debugf("éªŒè¯è¯¦æƒ…: é«˜åº¦=%d, nonce=%d, éš¾åº¦=%dä½, å®é™…å‰å¯¼é›¶=%dä½, æ—¶é—´æˆ³=%d",
				header.Height, nonce, header.Difficulty, 
				v.countLeadingZeroBits(blockHash), header.Timestamp)
		}
		
		return true, nil
	} else {
		// éªŒè¯å¤±è´¥
		v.recordError(ErrorDifficultyCheck)
		v.statistics.FailedValidations++
		
		actualZeroBits := v.countLeadingZeroBits(blockHash)
		logger.Warnf("ğŸš« POWéªŒè¯å¤±è´¥ï¼é«˜åº¦: %dï¼Œè¦æ±‚éš¾åº¦: %dä½ï¼Œå®é™…å‰å¯¼é›¶: %dä½ï¼Œå“ˆå¸Œ: %xï¼Œè€—æ—¶: %v",
			header.Height, header.Difficulty, actualZeroBits, blockHash, elapsed)
		
		// å¯èƒ½çš„å®‰å…¨é—®é¢˜è®°å½•
		if actualZeroBits == 0 {
			logger.Warnf("ğŸ”’ å®‰å…¨è­¦å‘Š: åŒºå—å“ˆå¸Œæ— å‰å¯¼é›¶ï¼Œå¯èƒ½æ˜¯ç¯¡æ”¹æˆ–ä¼ªé€ ï¼Œé«˜åº¦: %d", header.Height)
		}
		
		return false, nil // æ³¨æ„ï¼šéªŒè¯å¤±è´¥ä¸è¿”å›errorï¼Œåªæœ‰è®¡ç®—é”™è¯¯æ‰è¿”å›error
	}
}

// validateHashDifficulty éªŒè¯å“ˆå¸Œæ˜¯å¦æ»¡è¶³éš¾åº¦è¦æ±‚
//
// ğŸ” **é«˜æ•ˆéš¾åº¦éªŒè¯ç®—æ³•**ï¼š
// æ£€æŸ¥å“ˆå¸Œçš„å‰å¯¼é›¶ä½æ•°æ˜¯å¦æ»¡è¶³æŒ‡å®šçš„éš¾åº¦ç›®æ ‡ã€‚
// é‡‡ç”¨ä½æ“ä½œä¼˜åŒ–ï¼Œæ”¯æŒä»»æ„ç²¾åº¦çš„éš¾åº¦éªŒè¯ã€‚
//
// ğŸ“‹ **ç®—æ³•ç‰¹ç‚¹**ï¼š
// - é€å­—èŠ‚æ‰«æä¼˜åŒ–
// - æ—©æœŸé€€å‡ºç­–ç•¥
// - åˆ†æ”¯é¢„æµ‹å‹å¥½
// - CPUç¼“å­˜ä¼˜åŒ–
//
// ğŸ”„ **æ€§èƒ½ä¼˜åŒ–**ï¼š
// - æ— å†…å­˜åˆ†é…
// - ä½æ“ä½œä¼˜åŒ–
// - å¾ªç¯å±•å¼€è€ƒè™‘
// - ç¼–è¯‘å™¨ä¼˜åŒ–å‹å¥½
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - hash: å¾…éªŒè¯çš„å“ˆå¸Œå€¼ï¼ˆ32å­—èŠ‚ï¼‰
//   - targetBits: ç›®æ ‡éš¾åº¦ï¼ˆå‰å¯¼é›¶ä½æ•°ï¼‰
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - bool: trueè¡¨ç¤ºæ»¡è¶³éš¾åº¦è¦æ±‚ï¼Œfalseè¡¨ç¤ºä¸æ»¡è¶³
//
// ğŸ’¡ **ç®—æ³•è¯´æ˜**ï¼š
// ä»å“ˆå¸Œçš„æœ€é«˜ä½å¼€å§‹é€ä½æ£€æŸ¥ï¼Œè®¡ç®—è¿ç»­çš„å‰å¯¼é›¶ä½æ•°ã€‚
// å½“é‡åˆ°ç¬¬ä¸€ä¸ª1ä½æ—¶ï¼Œç«‹å³æ¯”è¾ƒå·²è®¡ç®—çš„é›¶ä½æ•°ä¸ç›®æ ‡éš¾åº¦ã€‚
func (v *ValidationEngine) validateHashDifficulty(hash []byte, targetBits uint64) bool {
	if targetBits == 0 {
		return true // éš¾åº¦ä¸º0æ€»æ˜¯æ»¡è¶³ï¼ˆæµ‹è¯•æ¨¡å¼ï¼‰
	}
	
	if len(hash) == 0 {
		return false // ç©ºå“ˆå¸Œä¸æ»¡è¶³ä»»ä½•éš¾åº¦
	}
	
	var zeroBits uint64
	
	// é€å­—èŠ‚æ£€æŸ¥å‰å¯¼é›¶ï¼ˆé«˜æ•ˆå®ç°ï¼‰
	for _, b := range hash {
		if b == 0 {
			// æ•´ä¸ªå­—èŠ‚éƒ½æ˜¯é›¶ï¼Œå¿«é€Ÿå¢åŠ 8ä½
			zeroBits += 8
			
			// æ—©æœŸæ»¡è¶³æ£€æŸ¥ï¼ˆä¼˜åŒ–ï¼šé¿å…ä¸å¿…è¦çš„ç»§ç»­æ‰«æï¼‰
			if zeroBits >= targetBits {
				return true
			}
		} else {
			// å­—èŠ‚å†…éƒ¨åˆ†ä½ä¸ºé›¶ï¼Œéœ€è¦ç²¾ç¡®è®¡ç®—
			for i := 7; i >= 0; i-- {
				if (b>>uint(i))&1 == 0 {
					zeroBits++
					
					// æ¯ä½æ£€æŸ¥æ˜¯å¦å·²æ»¡è¶³ç›®æ ‡
					if zeroBits >= targetBits {
						return true
					}
				} else {
					// é‡åˆ°ç¬¬ä¸€ä¸ª1ä½ï¼Œé›¶ä½è®¡æ•°ç»“æŸ
					return false
				}
			}
		}
	}
	
	// æç«¯æƒ…å†µï¼šæ•´ä¸ªå“ˆå¸Œéƒ½æ˜¯é›¶ï¼ˆç†è®ºä¸Šä¸å¯èƒ½ï¼Œä½†å¤„ç†è¾¹ç•Œæƒ…å†µï¼‰
	return zeroBits >= targetBits
}

// countLeadingZeroBits è®¡ç®—å“ˆå¸Œçš„å‰å¯¼é›¶ä½æ•°
//
// ğŸ“Š **ç»Ÿè®¡å·¥å…·æ–¹æ³•**ï¼š
// ç²¾ç¡®è®¡ç®—å“ˆå¸Œå€¼çš„å‰å¯¼é›¶ä½æ•°ï¼Œç”¨äºæ—¥å¿—è®°å½•å’Œè°ƒè¯•åˆ†æã€‚
// ä¸validateHashDifficultyä½¿ç”¨ç›¸åŒçš„ç®—æ³•ç¡®ä¿ä¸€è‡´æ€§ã€‚
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - hash: å¾…è®¡ç®—çš„å“ˆå¸Œå€¼
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - uint64: å‰å¯¼é›¶ä½æ•°
//
// ğŸ’¡ **ç”¨é€”**ï¼š
// - è°ƒè¯•ä¿¡æ¯è¾“å‡º
// - ç»Ÿè®¡åˆ†æ
// - æ€§èƒ½ç›‘æ§
// - é—®é¢˜è¯Šæ–­
func (v *ValidationEngine) countLeadingZeroBits(hash []byte) uint64 {
	if len(hash) == 0 {
		return 0
	}
	
	var zeroBits uint64
	
	for _, b := range hash {
		if b == 0 {
			zeroBits += 8
		} else {
			for i := 7; i >= 0; i-- {
				if (b>>uint(i))&1 == 0 {
					zeroBits++
				} else {
					return zeroBits
				}
			}
		}
	}
	
	return zeroBits
}

// recordError è®°å½•éªŒè¯é”™è¯¯ç»Ÿè®¡
//
// ğŸ“Š **é”™è¯¯ç»Ÿè®¡è®°å½•**ï¼š
// è®°å½•å„ç§ç±»å‹çš„éªŒè¯é”™è¯¯ï¼Œç”¨äºç³»ç»Ÿç›‘æ§å’Œé—®é¢˜åˆ†æã€‚
// æä¾›è¯¦ç»†çš„é”™è¯¯åˆ†ç±»ç»Ÿè®¡ä¿¡æ¯ã€‚
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - errorType: é”™è¯¯ç±»å‹ï¼ˆä½¿ç”¨é¢„å®šä¹‰å¸¸é‡ï¼‰
//
// ğŸ’¡ **ç”¨é€”**ï¼š
// - é”™è¯¯æ¨¡å¼åˆ†æ
// - ç³»ç»Ÿå¥åº·ç›‘æ§
// - å®‰å…¨äº‹ä»¶è¿½è¸ª
// - æ€§èƒ½é—®é¢˜è¯Šæ–­
func (v *ValidationEngine) recordError(errorType string) {
	v.statistics.FailedValidations++
	v.statistics.ErrorCounts[errorType]++
}

// BatchVerifyBlockHeaders æ‰¹é‡éªŒè¯åŒºå—å¤´
//
// âš¡ **æ‰¹é‡éªŒè¯ä¼˜åŒ–**ï¼š
// åŒæ—¶éªŒè¯å¤šä¸ªåŒºå—å¤´ï¼Œé€šè¿‡æ‰¹é‡å¤„ç†æé«˜éªŒè¯æ•ˆç‡ã€‚
// é€‚ç”¨äºåŒæ­¥éªŒè¯ã€æ‰¹é‡å¯¼å…¥ç­‰åœºæ™¯ã€‚
//
// ğŸ“‹ **æ€§èƒ½ä¼˜åŒ–**ï¼š
// - æ‰¹é‡å†…å­˜åˆ†é…
// - å¹¶è¡ŒéªŒè¯ï¼ˆå¯é€‰ï¼‰
// - ç¼“å­˜å‹å¥½çš„æ•°æ®è®¿é—®
// - æ—©æœŸå¤±è´¥è·³è¿‡
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - headers: å¾…éªŒè¯çš„åŒºå—å¤´åˆ—è¡¨
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - []bool: æ¯ä¸ªåŒºå—å¤´çš„éªŒè¯ç»“æœ
//   - error: æ‰¹é‡éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
//
// ğŸ’¡ **é€‚ç”¨åœºæ™¯**ï¼š
// - åŒºå—é“¾åŒæ­¥éªŒè¯
// - æ‰¹é‡æ•°æ®å¯¼å…¥
// - æ€§èƒ½æµ‹è¯•
// - å†å²æ•°æ®éªŒè¯
func (v *ValidationEngine) BatchVerifyBlockHeaders(headers []*core.BlockHeader) ([]bool, error) {
	if len(headers) == 0 {
		return []bool{}, nil
	}
	
	logger := v.coreEngine.GetLogger()
	logger.Infof("å¼€å§‹æ‰¹é‡éªŒè¯ï¼ŒåŒºå—æ•°é‡: %d", len(headers))
	
	startTime := time.Now()
	results := make([]bool, len(headers))
	successCount := 0
	
	// é€ä¸ªéªŒè¯ï¼ˆæœªæ¥å¯ä»¥ä¼˜åŒ–ä¸ºå¹¶è¡ŒéªŒè¯ï¼‰
	for i, header := range headers {
		if header == nil {
			results[i] = false
			logger.Warnf("æ‰¹é‡éªŒè¯: ç¬¬%dä¸ªåŒºå—å¤´ä¸ºç©º", i)
			continue
		}
		
		isValid, err := v.VerifyBlockHeader(header)
		if err != nil {
			logger.Errorf("æ‰¹é‡éªŒè¯: ç¬¬%dä¸ªåŒºå—å¤´éªŒè¯å‡ºé”™ï¼Œé«˜åº¦: %dï¼Œé”™è¯¯: %v", 
				i, header.Height, err)
			results[i] = false
		} else {
			results[i] = isValid
			if isValid {
				successCount++
			}
		}
	}
	
	elapsed := time.Since(startTime)
	logger.Infof("æ‰¹é‡éªŒè¯å®Œæˆï¼Œæ€»æ•°: %dï¼ŒæˆåŠŸ: %dï¼Œå¤±è´¥: %dï¼Œè€—æ—¶: %vï¼Œå¹³å‡: %v/ä¸ª",
		len(headers), successCount, len(headers)-successCount, 
		elapsed, time.Duration(int64(elapsed)/int64(len(headers))))
	
	return results, nil
}

// GetStatistics è·å–éªŒè¯ç»Ÿè®¡ä¿¡æ¯
//
// ğŸ“Š **ç»Ÿè®¡ä¿¡æ¯è®¿é—®**ï¼š
// è·å–éªŒè¯å¼•æ“çš„å®æ—¶ç»Ÿè®¡ä¿¡æ¯ï¼Œç”¨äºç›‘æ§ç•Œé¢å±•ç¤ºå’Œæ€§èƒ½åˆ†æã€‚
// è¿”å›ç»Ÿè®¡ä¿¡æ¯çš„å‰¯æœ¬ï¼Œé¿å…å¹¶å‘è®¿é—®é—®é¢˜ã€‚
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - ValidationStats: å½“å‰çš„éªŒè¯ç»Ÿè®¡ä¿¡æ¯
//
// ğŸ’¡ **ä½¿ç”¨åœºæ™¯**ï¼š
// - ç›‘æ§ç•Œé¢å±•ç¤ºéªŒè¯çŠ¶æ€
// - æ€§èƒ½ç›‘æ§å’Œåˆ†æ
// - å®‰å…¨å®¡è®¡æŠ¥å‘Š
// - APIæ¥å£æ•°æ®æä¾›
func (v *ValidationEngine) GetStatistics() ValidationStats {
	// åˆ›å»ºç»Ÿè®¡ä¿¡æ¯çš„å‰¯æœ¬ï¼ˆæ·±æ‹·è´é”™è¯¯è®¡æ•°ï¼‰
	errorCountsCopy := make(map[string]uint64)
	for k, v := range v.statistics.ErrorCounts {
		errorCountsCopy[k] = v
	}
	
	return ValidationStats{
		TotalValidations:      v.statistics.TotalValidations,
		SuccessfulValidations: v.statistics.SuccessfulValidations,
		FailedValidations:     v.statistics.FailedValidations,
		TotalValidationTime:   v.statistics.TotalValidationTime,
		AverageValidationTime: v.statistics.AverageValidationTime,
		LastValidationTime:    v.statistics.LastValidationTime,
		ErrorCounts:           errorCountsCopy,
	}
}

// ResetStatistics é‡ç½®éªŒè¯ç»Ÿè®¡ä¿¡æ¯
//
// ğŸ”„ **ç»Ÿè®¡é‡ç½®**ï¼š
// æ¸…é›¶æ‰€æœ‰éªŒè¯ç»Ÿè®¡ä¿¡æ¯ï¼Œç”¨äºé•¿æ—¶é—´è¿è¡Œçš„èŠ‚ç‚¹æˆ–æµ‹è¯•åœºæ™¯ã€‚
// ä¿ç•™å½“å‰æ—¶é—´ä½œä¸ºæ–°çš„èµ·å§‹æ—¶é—´ã€‚
//
// ğŸ’¡ **ä½¿ç”¨åœºæ™¯**ï¼š
// - é•¿æ—¶é—´è¿è¡Œåçš„ç»Ÿè®¡é‡ç½®
// - æµ‹è¯•ç¯å¢ƒçš„æ•°æ®æ¸…ç†
// - ç»Ÿè®¡å‘¨æœŸçš„é‡æ–°å¼€å§‹
// - ç³»ç»Ÿç»´æŠ¤åçš„çŠ¶æ€é‡ç½®
func (v *ValidationEngine) ResetStatistics() {
	v.statistics = &ValidationStats{
		LastValidationTime: time.Now(),
		ErrorCounts:        make(map[string]uint64),
	}
	
	v.coreEngine.GetLogger().Info("éªŒè¯ç»Ÿè®¡ä¿¡æ¯å·²é‡ç½®")
}

// ValidateNonce å•ç‹¬éªŒè¯nonceæ ¼å¼
//
// ğŸ”§ **ä¸“é—¨å·¥å…·æ–¹æ³•**ï¼š
// å•ç‹¬éªŒè¯nonceå­—æ®µçš„æ ¼å¼å’Œæœ‰æ•ˆæ€§ï¼Œç”¨äºé¢„æ£€æŸ¥å’Œè°ƒè¯•ã€‚
//
// ğŸ“‹ **éªŒè¯å†…å®¹**ï¼š
// - nonceå­—æ®µéç©º
// - nonceé•¿åº¦ä¸º8å­—èŠ‚
// - nonceå€¼åœ¨åˆç†èŒƒå›´å†…
//
// ğŸ“‹ **å‚æ•°è¯´æ˜**ï¼š
//   - nonce: å¾…éªŒè¯çš„nonceå­—èŠ‚æ•°ç»„
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - error: éªŒè¯å¤±è´¥æ—¶çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºéªŒè¯é€šè¿‡
func (v *ValidationEngine) ValidateNonce(nonce []byte) error {
	if len(nonce) == 0 {
		return fmt.Errorf("nonceä¸èƒ½ä¸ºç©º")
	}
	
	if len(nonce) != 8 {
		return fmt.Errorf("nonceé•¿åº¦å¿…é¡»ä¸º8å­—èŠ‚ï¼Œå®é™…é•¿åº¦: %d", len(nonce))
	}
	
	return nil
}

// GetSuccessRate è·å–éªŒè¯æˆåŠŸç‡
//
// ğŸ“Š **æˆåŠŸç‡è®¡ç®—**ï¼š
// è®¡ç®—éªŒè¯å¼•æ“çš„å†å²æˆåŠŸç‡ï¼Œç”¨äºç³»ç»Ÿå¥åº·è¯„ä¼°ã€‚
//
// ğŸ”„ **è¿”å›å€¼**ï¼š
//   - float64: æˆåŠŸç‡ï¼ˆ0.0-1.0ï¼‰
//   - bool: æ˜¯å¦æœ‰è¶³å¤Ÿçš„æ•°æ®è¿›è¡Œè®¡ç®—
//
// ğŸ’¡ **ç”¨é€”**ï¼š
// - ç³»ç»Ÿå¥åº·ç›‘æ§
// - æ€§èƒ½è¯„ä¼°
// - è´¨é‡æŒ‡æ ‡
// - å‘Šè­¦é˜ˆå€¼åˆ¤æ–­
func (v *ValidationEngine) GetSuccessRate() (float64, bool) {
	total := v.statistics.TotalValidations
	if total == 0 {
		return 0.0, false // æ²¡æœ‰æ•°æ®
	}
	
	successRate := float64(v.statistics.SuccessfulValidations) / float64(total)
	return successRate, true
}
