// æ–‡ä»¶è¯´æ˜ï¼š
// æœ¬æ–‡ä»¶å®ç°å€™é€‰åŒºå—æ± ï¼ˆCandidatePoolï¼‰çš„æ ¸å¿ƒå­˜å‚¨ä¸ç»´æŠ¤é€»è¾‘ã€‚
// è®¾è®¡ç›®æ ‡ï¼š
// 1ï¼‰é«˜å†…èšä½è€¦åˆï¼šä¸“æ³¨å€™é€‰åŒºå—çš„æ¥æ”¶ã€å­˜å‚¨ã€ç´¢å¼•ä¸æ¸…ç†ï¼›
// 2ï¼‰åˆ†å±‚éªŒè¯ï¼šä»…åšåŸºç¡€å®‰å…¨éªŒè¯ï¼ˆæ ¼å¼/å“ˆå¸Œ/å¤§å°/é‡å¤/å†…å­˜ï¼‰ï¼›é«˜åº¦ç­‰ä¸šåŠ¡æ ¡éªŒç”±ä¸Šå±‚è´Ÿè´£ï¼›
// 3ï¼‰äº‹ä»¶ä¸‹æ²‰ï¼šå¯¹å¤–ä»…æš´éœ² CandidateEventSink æ¥å£ï¼Œç”± integration å±‚æ¡¥æ¥ EventBusï¼›
// 4ï¼‰çº¿ç¨‹å®‰å…¨ï¼šå…¨å±€é‡‡ç”¨é”ä¿æŠ¤å†…éƒ¨çŠ¶æ€ï¼Œæ”¯æŒå¹¶å‘è®¿é—®ï¼›
// 5ï¼‰å†…å­˜å¯æ§ï¼šæŒ‰å­—èŠ‚è·Ÿè¸ª memoryUsage ä¸ memoryLimitï¼Œå®šæœŸæ¸…ç†ã€‚
package candidatepool

import (
	"context"
	"encoding/hex"
	"fmt"
	"sync"
	"time"
	"unicode/utf8"

	"github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/internal/config/candidatepool"
	"github.com/weisyn/v1/internal/core/mempool/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/types"
)

// eventTopics å®šä¹‰å€™é€‰åŒºå—æ± ç›¸å…³çš„äº‹ä»¶ä¸»é¢˜ï¼ˆä»…ç”¨äºè§„èŒƒäº‹ä»¶å‘½åï¼Œä¸ç›´æ¥è€¦åˆå®ç°ï¼‰
const (
	TopicCandidateAdded   event.EventType = "candidate:added"
	TopicCandidateRemoved event.EventType = "candidate:removed"
	TopicCandidateExpired event.EventType = "candidate:expired"
	TopicPoolCleared      event.EventType = "pool:cleared"
	TopicPoolState        event.EventType = "pool:state"
)

// é”™è¯¯å®šä¹‰
var (
	ErrCandidateAlreadyExists = fmt.Errorf("å€™é€‰åŒºå—å·²å­˜åœ¨")
	ErrCandidateNotFound      = fmt.Errorf("å€™é€‰åŒºå—æœªæ‰¾åˆ°")
	ErrPoolClosed             = fmt.Errorf("å€™é€‰åŒºå—æ± å·²å…³é—­")
	ErrInvalidBlock           = fmt.Errorf("æ— æ•ˆçš„å€™é€‰åŒºå—")
	ErrMemoryLimit            = fmt.Errorf("å†…å­˜é™åˆ¶è¶…å‡º")
	ErrPoolFull               = fmt.Errorf("å€™é€‰åŒºå—æ± å·²æ»¡")
	ErrTimeout                = fmt.Errorf("æ“ä½œè¶…æ—¶")
	ErrInvalidHeight          = fmt.Errorf("å€™é€‰åŒºå—é«˜åº¦æ— æ•ˆ")
	ErrOutdatedBlock          = fmt.Errorf("å€™é€‰åŒºå—å·²è¿‡æ—¶")
	ErrFutureBlock            = fmt.Errorf("å€™é€‰åŒºå—æ¥è‡ªæœªæ¥")
)

// ChainStateProvider é“¾çŠ¶æ€æä¾›è€…æ¥å£ï¼ˆç”¨äºäº‹ä»¶é©±åŠ¨æ¶æ„ï¼‰
// è¯´æ˜ï¼šä»…ä½œä¸ºå¯é€‰ä¾èµ–ï¼Œå¸®åŠ©è¿›è¡ŒæŸäº›ç»´æŠ¤æ€§åˆ¤æ–­ï¼›ä¸å‚ä¸ä¸šåŠ¡æ ¡éªŒã€‚
type ChainStateProvider interface {
	GetCurrentHeight(ctx context.Context) (uint64, error)
	GetLatestBlockHash(ctx context.Context) ([]byte, error)
	IsValidHeight(height uint64) bool
}

// CandidatePool å€™é€‰åŒºå—æ± å®ç°
//
// ğŸ¯ è®¾è®¡åŸåˆ™ï¼š
// - é«˜å†…èšä½è€¦åˆï¼šä¸“æ³¨äºå€™é€‰åŒºå—å­˜å‚¨ï¼Œä¸šåŠ¡é€»è¾‘å§”æ‰˜ç»™æ³¨å…¥çš„æœåŠ¡
// - åˆ†å±‚éªŒè¯ï¼šåŸºç¡€å®‰å…¨éªŒè¯é˜²æ­¢ç½‘ç»œæ”»å‡»ï¼Œä¸šåŠ¡é€»è¾‘éªŒè¯ç”±å¤–éƒ¨è´Ÿè´£
// - çº¿ç¨‹å®‰å…¨ï¼šæ”¯æŒå¹¶å‘è®¿é—®å’Œæ“ä½œ
// - å†…å­˜å¯æ§ï¼šä¸¥æ ¼çš„å†…å­˜ä½¿ç”¨é™åˆ¶å’Œæ¸…ç†æœºåˆ¶
type CandidatePool struct {
	// ========== åˆ†å±‚éªŒè¯ç»„ä»¶ ==========
	basicValidator BasicCandidateValidator // åŸºç¡€å®‰å…¨éªŒè¯å™¨ï¼ˆé˜²ç½‘ç»œæ”»å‡»ï¼‰

	// ========== çº¯å­˜å‚¨å­—æ®µ ==========
	candidates         map[string]*types.CandidateBlock   // å€™é€‰åŒºå—å“ˆå¸Œåˆ°åŒºå—çš„æ˜ å°„
	candidatesByHeight map[uint64][]*types.CandidateBlock // æŒ‰é«˜åº¦ç´¢å¼•çš„å€™é€‰åŒºå—
	pendingCandidates  map[string]struct{}                // å¾…éªŒè¯å€™é€‰åŒºå—
	verifiedCandidates map[string]struct{}                // å·²éªŒè¯å€™é€‰åŒºå—
	expiredCandidates  map[string]struct{}                // å·²è¿‡æœŸå€™é€‰åŒºå—

	// ========== å­˜å‚¨ç®¡ç†å­—æ®µ ==========
	config      *candidatepool.CandidatePoolOptions // å€™é€‰åŒºå—æ± é…ç½®
	memory      storage.MemoryStore                 // å†…å­˜å­˜å‚¨
	memoryLimit uint64                              // å†…å­˜ä½¿ç”¨é™åˆ¶(å­—èŠ‚)
	memoryUsage uint64                              // å½“å‰å†…å­˜ä½¿ç”¨é‡(å­—èŠ‚)

	// ========== åŸºç¡€è®¾æ–½å­—æ®µ ==========
	logger    log.Logger         // æ—¥å¿—è®°å½•å™¨
	eventSink CandidateEventSink // äº‹ä»¶ä¸‹æ²‰
	mu        sync.RWMutex       // åŒæ­¥é”
	quit      chan struct{}      // å…³é—­ä¿¡å·
	isRunning bool               // è¿è¡ŒçŠ¶æ€

	// ========== æ³¨å…¥çš„åŸºç¡€æœåŠ¡ ==========
	hashService     core.BlockHashServiceClient // åŒºå—å“ˆå¸ŒæœåŠ¡ï¼ˆæ¥è‡ªcryptoæ¨¡å—ï¼‰
	chainStateCache ChainStateProvider          // é“¾çŠ¶æ€ç¼“å­˜ï¼ˆç”¨äºäº‹ä»¶é©±åŠ¨æ¶æ„ï¼‰

	// ========== æ—¶é—´å’Œç»Ÿè®¡å­—æ®µ ==========
	startTime     time.Time // å¯åŠ¨æ—¶é—´
	lastCleanupAt time.Time // æœ€åæ¸…ç†æ—¶é—´

	// æ€§èƒ½ç»Ÿè®¡
	totalAdded   uint64 // æ€»æ·»åŠ æ¬¡æ•°
	totalRemoved uint64 // æ€»ç§»é™¤æ¬¡æ•°

	// é”™è¯¯ç»Ÿè®¡
	validationErrors uint64 // éªŒè¯é”™è¯¯æ¬¡æ•°
	duplicateBlocks  uint64 // é‡å¤åŒºå—æ¬¡æ•°
	memoryErrors     uint64 // å†…å­˜ä¸è¶³é”™è¯¯æ¬¡æ•°

	// ========== ç­‰å¾…é€šé“ ==========
	waitChannels map[string]chan []*types.CandidateBlock // ç­‰å¾…å€™é€‰åŒºå—çš„é€šé“
}

// å·²ç§»é™¤å‘åå…¼å®¹æ„é€ å™¨ NewCandidatePoolï¼Œç»Ÿä¸€ä½¿ç”¨ NewCandidatePoolWithCache

// NewCandidatePoolWithCache åˆ›å»ºå¸¦é“¾çŠ¶æ€ç¼“å­˜çš„å€™é€‰åŒºå—æ± ï¼ˆäº‹ä»¶é©±åŠ¨ç‰ˆæœ¬ï¼‰
// å‚æ•°ï¼š
// - configï¼šå€™é€‰æ± é…ç½®ï¼ŒåŒ…å«å†…å­˜ä¸Šé™ã€æ¸…ç†é—´éš”ã€æœ€å¤§æ•°é‡ç­‰ï¼›
// - loggerï¼šæ—¥å¿—æ¥å£ï¼›
// - eventBusï¼šäº‹ä»¶æ€»çº¿ï¼ˆç”±integrationå±‚æ³¨å…¥ä¸‹æ²‰å®ç°ï¼Œæ­¤å¤„ä¸ç›´æ¥è€¦åˆä½¿ç”¨ï¼‰ï¼›
// - memoryï¼šå†…å­˜å­˜å‚¨ï¼›
// - hashServiceï¼šåŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼›
// - chainStateCacheï¼šå¯é€‰é“¾çŠ¶æ€æä¾›è€…ï¼Œç”¨äºç»´æŠ¤æ€§åˆ¤æ–­ã€‚
// è¿”å›ï¼š
// - interfaces.InternalCandidatePoolï¼šå€™é€‰æ± å†…éƒ¨æ¥å£å®ä¾‹ï¼›
// - errorï¼šåˆå§‹åŒ–å¤±è´¥æ—¶è¿”å›é”™è¯¯ã€‚
func NewCandidatePoolWithCache(
	config *candidatepool.CandidatePoolOptions,
	logger log.Logger,
	eventBus event.EventBus,
	memory storage.MemoryStore,
	hashService core.BlockHashServiceClient,
	chainStateCache ChainStateProvider,
) (interfaces.InternalCandidatePool, error) {
	// ğŸ” åŸºç¡€é˜²å¾¡ï¼šé…ç½®ä¸èƒ½ä¸ºç©ºï¼ˆä¼˜å…ˆäºä»»ä½•ä½¿ç”¨ config çš„é€»è¾‘ï¼‰
	if config == nil {
		return nil, fmt.Errorf("é…ç½®ä¸èƒ½ä¸ºç©º")
	}

	// ğŸ” é˜²å¾¡æ€§ä¿®å¤ï¼šCleanupInterval å¿…é¡»ä¸ºæ­£å€¼ï¼Œé¿å… time.NewTicker(0) ç›´æ¥ panic
	if config.CleanupInterval <= 0 {
		// å…¼å®¹ï¼šå†å²æµ‹è¯•/è°ƒç”¨æ–¹å¯èƒ½æœªæ˜¾å¼è®¾ç½® CleanupIntervalã€‚
		// åœ¨è¿è¡Œæ—¶ä¾ç„¶éœ€è¦ä¸€ä¸ªå®‰å…¨é»˜è®¤å€¼æ¥é¿å… ticker panicã€‚
		config.CleanupInterval = 1 * time.Minute
	}

	// åˆ›å»ºé‡å¤æ£€æµ‹å›è°ƒï¼šæ ¹æ®å€™é€‰æ± å­˜å‚¨é”®ï¼ˆåŒºå—å“ˆå¸Œå­—ç¬¦ä¸²ï¼‰åˆ¤æ–­æ˜¯å¦å­˜åœ¨
	duplicateExistsFn := func(hash []byte) bool {
		if len(hash) == 0 {
			return false
		}
		// æ³¨æ„ï¼šæ­¤å¤„åªç”¨äºéªŒè¯å™¨ï¼ŒPool å°šæœªæ„é€ å®Œæˆï¼Œå…ˆç”¨ä¸´æ—¶ map é€»è¾‘ç”±é—­åŒ…åœ¨ç¨åç»‘å®š
		return false
	}

	// åˆ›å»ºåŸºç¡€éªŒè¯å™¨ï¼ˆå…ˆå ä½å›è°ƒï¼Œç¨åå®ä¾‹åŒ– Pool åå†ç»‘å®šçœŸæ­£çš„å®ç°ï¼‰
	basicValidator := NewBasicCandidateValidator(
		config,
		logger,
		duplicateExistsFn,
	)

	// åˆ›å»ºå€™é€‰åŒºå—æ± 
	pool := &CandidatePool{
		// ========== åˆ†å±‚éªŒè¯ç»„ä»¶ ==========
		basicValidator: basicValidator,

		// ========== çº¯å­˜å‚¨å­—æ®µ ==========
		candidates:         make(map[string]*types.CandidateBlock),
		candidatesByHeight: make(map[uint64][]*types.CandidateBlock),
		pendingCandidates:  make(map[string]struct{}),
		verifiedCandidates: make(map[string]struct{}),
		expiredCandidates:  make(map[string]struct{}),

		// ========== å­˜å‚¨ç®¡ç†å­—æ®µ ==========
		config:      config,
		memory:      memory,
		memoryLimit: config.MemoryLimit,
		memoryUsage: 0,

		// ========== åŸºç¡€è®¾æ–½å­—æ®µ ==========
		logger:          logger,
		quit:            make(chan struct{}),
		hashService:     hashService,
		chainStateCache: chainStateCache,

		// ========== æ—¶é—´å’Œç»Ÿè®¡å­—æ®µ ==========
		startTime:     time.Now(),
		lastCleanupAt: time.Now(),

		// ========== ç­‰å¾…é€šé“ ==========
		waitChannels: make(map[string]chan []*types.CandidateBlock),
	}

	// ç°åœ¨ Pool å·²åˆ›å»ºï¼Œé‡ç»‘å®šéªŒè¯å™¨ä¸­çš„ duplicateExistsFn
	if pv, ok := pool.basicValidator.(*ProductionBasicCandidateValidator); ok {
		pv.duplicateExistsFn = func(hash []byte) bool {
			_, exists := pool.candidates[string(hash)]
			return exists
		}
	}

	// äº‹ä»¶ä¸‹æ²‰é»˜è®¤ Noopï¼Œç”± integration å±‚åœ¨ Fx ä¸­æ³¨å…¥çœŸå®å®ç°
	pool.eventSink = NoopCandidateEventSink{}

	return pool, nil
}

// Start å¯åŠ¨å€™é€‰åŒºå—æ± æœåŠ¡ã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼š
// - errorï¼šå·²åœ¨è¿è¡Œæˆ–å…¶ä»–é”™è¯¯æ—¶è¿”å›é”™è¯¯ã€‚
func (p *CandidatePool) Start() error {
	p.mu.Lock()
	defer p.mu.Unlock()

	if p.isRunning {
		return fmt.Errorf("å€™é€‰åŒºå—æ± å·²åœ¨è¿è¡Œ")
	}

	p.isRunning = true
	p.startTime = time.Now()

	// å¯åŠ¨ç»´æŠ¤åç¨‹
	go p.maintenanceLoop()

	if p.logger != nil {
		p.logger.Info("å€™é€‰åŒºå—æ± å·²å¯åŠ¨")
	}

	return nil
}

// Stop åœæ­¢å€™é€‰åŒºå—æ± æœåŠ¡ã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼š
// - errorï¼šæœªè¿è¡Œæˆ–å…¶ä»–é”™è¯¯æ—¶è¿”å›é”™è¯¯ã€‚
func (p *CandidatePool) Stop() error {
	p.mu.Lock()
	defer p.mu.Unlock()

	if !p.isRunning {
		return fmt.Errorf("å€™é€‰åŒºå—æ± æœªè¿è¡Œ")
	}

	close(p.quit)
	p.isRunning = false

	// å…³é—­æ‰€æœ‰ç­‰å¾…é€šé“
	for _, ch := range p.waitChannels {
		close(ch)
	}
	p.waitChannels = make(map[string]chan []*types.CandidateBlock)

	if p.logger != nil {
		p.logger.Info("å€™é€‰åŒºå—æ± å·²åœæ­¢")
	}

	return nil
}

// IsRunning æ£€æŸ¥å€™é€‰åŒºå—æ± æ˜¯å¦æ­£åœ¨è¿è¡Œã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼š
// - boolï¼štrue è¡¨ç¤ºè¿è¡Œä¸­ï¼Œfalse è¡¨ç¤ºæœªè¿è¡Œã€‚
func (p *CandidatePool) IsRunning() bool {
	p.mu.RLock()
	defer p.mu.RUnlock()
	return p.isRunning
}

// SetEventSink æ³¨å…¥å€™é€‰æ± äº‹ä»¶ä¸‹æ²‰å®ç°ã€‚
// å‚æ•°ï¼š
// - sinkï¼šäº‹ä»¶ä¸‹æ²‰å®ç°ï¼ˆnil æ—¶è‡ªåŠ¨é™çº§ä¸º Noopï¼‰ã€‚
// è¿”å›ï¼šæ— ã€‚
func (p *CandidatePool) SetEventSink(sink CandidateEventSink) {
	p.mu.Lock()
	defer p.mu.Unlock()
	if sink == nil {
		p.eventSink = NoopCandidateEventSink{}
		return
	}
	p.eventSink = sink
}

// maintenanceLoop æ‰§è¡Œå€™é€‰åŒºå—æ± ç»´æŠ¤ä»»åŠ¡ï¼ˆå®šæ—¶æ¸…ç†ï¼‰ã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼šæ— ã€‚
func (p *CandidatePool) maintenanceLoop() {
	cleanupTicker := time.NewTicker(p.config.CleanupInterval)
	defer cleanupTicker.Stop()

	for {
		select {
		case <-cleanupTicker.C:
			p.performMaintenance()
		case <-p.quit:
			return
		}
	}
}

// performMaintenance æ‰§è¡Œç»´æŠ¤ä»»åŠ¡ï¼šæ¸…ç†è¿‡æœŸä¸è¿‡æ—¶å€™é€‰ï¼Œå¹¶å‘å¸ƒæ¸…ç†å®Œæˆäº‹ä»¶ã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼šæ— ã€‚
func (p *CandidatePool) performMaintenance() {
	p.mu.Lock()
	defer p.mu.Unlock()

	// ä½¿ç”¨æ–°çš„ç»¼åˆæ¸…ç†æœºåˆ¶
	totalRemoved := p.cleanExpiredCandidatesInternal()

	// æ›´æ–°æœ€åæ¸…ç†æ—¶é—´
	p.lastCleanupAt = time.Now()

	// å‘å¸ƒæ± çŠ¶æ€äº‹ä»¶
	if p.eventSink != nil && totalRemoved > 0 {
		p.eventSink.OnCleanupCompleted()

		if p.logger != nil {
			p.logger.Infof("ç»´æŠ¤æ¸…ç†å®Œæˆï¼Œæ¸…ç†å€™é€‰åŒºå—: %dä¸ª, å½“å‰æ± å¤§å°: %d",
				totalRemoved, len(p.candidates))
		}
	}
}

// AddCandidate æ·»åŠ å•ä¸ªå€™é€‰åŒºå—ã€‚
// å‚æ•°ï¼š
// - blockï¼šå¾…æ·»åŠ çš„å€™é€‰åŒºå—ï¼›
// - fromPeerï¼šæ¥æºèŠ‚ç‚¹IDï¼ˆæœ¬åœ°æäº¤å¯ä¸ºç©ºå­—ç¬¦ä¸²ï¼‰ã€‚
// è¿”å›ï¼š
// - []byteï¼šè®¡ç®—å¾—åˆ°çš„åŒºå—å“ˆå¸Œï¼›
// - errorï¼šå‡ºé”™æ—¶è¿”å›ï¼ˆä¾‹å¦‚é‡å¤ã€è¶…é™ã€æ ¼å¼/å“ˆå¸Œ/å¤§å°æ ¡éªŒå¤±è´¥ç­‰ï¼‰ã€‚
func (p *CandidatePool) AddCandidate(block *core.Block, fromPeer string) ([]byte, error) {
	p.mu.Lock()
	defer p.mu.Unlock()

	// æ£€æŸ¥å€™é€‰åŒºå—æ± æ˜¯å¦å·²å…³é—­
	select {
	case <-p.quit:
		return nil, ErrPoolClosed
	default:
	}

	// ğŸ›¡ï¸ ç¬¬1æ­¥ï¼šåŸºç¡€å®‰å…¨éªŒè¯
	if err := p.basicValidator.ValidateFormat(block); err != nil {
		p.validationErrors++
		if p.logger != nil {
			p.logger.Warnf("å€™é€‰åŒºå—æ ¼å¼éªŒè¯å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("æ ¼å¼éªŒè¯å¤±è´¥: %v", err)
	}

	// é«˜åº¦æ ¡éªŒç”±ä¸Šå±‚ä¸šåŠ¡åœ¨æäº¤å‰å®Œæˆï¼Œæ­¤å¤„ä¸å†æ ¡éªŒ

	// è®¡ç®—åŒºå—å“ˆå¸Œ
	blockHash, err := p.calcBlockHash(block)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %v", err)
	}

	if err := p.basicValidator.ValidateHash(block, blockHash); err != nil {
		p.validationErrors++
		if p.logger != nil {
			p.logger.Warnf("å€™é€‰åŒºå—å“ˆå¸ŒéªŒè¯å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("å“ˆå¸ŒéªŒè¯å¤±è´¥: %v", err)
	}

	// å¤§å°éªŒè¯
	if err := p.basicValidator.ValidateSize(block); err != nil {
		p.validationErrors++
		if p.logger != nil {
			p.logger.Warnf("å€™é€‰åŒºå—å¤§å°éªŒè¯å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("å¤§å°éªŒè¯å¤±è´¥: %v", err)
	}

	// é‡å¤æ£€æµ‹
	// âš ï¸ æ³¨æ„ï¼šç¦æ­¢ä½¿ç”¨ string([]byte) ä½œä¸º map keyï¼ˆå¯èƒ½åŒ…å«ä¸å¯è§å­—ç¬¦/éUTF-8ï¼Œå¯¼è‡´ä¸å¯è§‚æµ‹ä¸æ½œåœ¨è¾¹ç•Œé—®é¢˜ï¼‰
	blockHashKey := hex.EncodeToString(blockHash)
	if _, exists := p.candidates[blockHashKey]; exists {
		p.duplicateBlocks++
		return blockHash, ErrCandidateAlreadyExists
	}

	if dup, err := p.basicValidator.ValidateDuplicate(blockHash); err != nil {
		p.duplicateBlocks++
		return blockHash, fmt.Errorf("é‡å¤æ£€æµ‹å¤±è´¥: %v", err)
	} else if dup {
		p.duplicateBlocks++
		return blockHash, ErrCandidateAlreadyExists
	}

	// å†…å­˜é™åˆ¶éªŒè¯
	estimatedSize := uint64(estimateBlockSize(block))
	if p.memoryUsage+estimatedSize > p.memoryLimit {
		p.memoryErrors++
		if p.logger != nil {
			p.logger.Warnf("å†…å­˜é™åˆ¶éªŒè¯å¤±è´¥ï¼Œå½“å‰: %d, ä¼°ç®—: %d, é™åˆ¶: %d", p.memoryUsage, estimatedSize, p.memoryLimit)
		}
		return blockHash, ErrMemoryLimit
	}

	// æœ€å¤§å€™é€‰æ•°é‡æ§åˆ¶ï¼ˆå¤šå±‚æ¸…ç†ç­–ç•¥ï¼‰
	maxCandidates := p.config.MaxCandidates
	if len(p.candidates) >= maxCandidates {
		// 1. å…ˆè¿›è¡Œæ ‡å‡†æ¸…ç†ï¼ˆåŸºäºæ—¶é—´å’Œé«˜åº¦ï¼‰
		cleanedCount := p.cleanExpiredCandidatesInternal()

		// 2. å¦‚æœæ ‡å‡†æ¸…ç†åä»ç„¶æ»¡ï¼Œå°è¯•æ¿€è¿›æ¸…ç†
		if len(p.candidates) >= maxCandidates {
			aggressiveCleanedCount := p.cleanAggressively()
			cleanedCount += aggressiveCleanedCount
		}

		// 3. å¦‚æœç»è¿‡æ‰€æœ‰æ¸…ç†åä»ç„¶æ»¡ï¼Œåˆ™è¿”å›é”™è¯¯
		if len(p.candidates) >= maxCandidates {
			if p.logger != nil {
				p.logger.Warnf("å€™é€‰åŒºå—æ± å·²æ»¡ä¸”æ¸…ç†æ— æ•ˆ (æ¸…ç†äº†%dä¸ª): %d/%d",
					cleanedCount, len(p.candidates), maxCandidates)
			}
			return blockHash, ErrPoolFull
		}

		if p.logger != nil && cleanedCount > 0 {
			p.logger.Infof("å€™é€‰åŒºå—æ± æ¸…ç†å®Œæˆï¼Œæ¸…ç†äº†%dä¸ªå€™é€‰åŒºå—ï¼Œå½“å‰: %d/%d",
				cleanedCount, len(p.candidates), maxCandidates)
		}
	}

	// åˆ›å»ºå€™é€‰åŒºå—åŒ…è£…å™¨
	var sourcePeer peer.ID
	if fromPeer != "" {
		// fromPeer çº¦å®šä¸º peer.ID çš„å¯æ‰“å°å½¢å¼ï¼ˆbase58 / peer.ID.String()ï¼‰ã€‚
		// è‹¥æ— æ³• decodeï¼Œåˆ™ä¿æŒä¸ºç©ºï¼ˆä¸é˜»æ–­å…¥æ± ï¼‰ï¼Œä¸Šå±‚ä¼šç”¨ FromPeer åšè¯Šæ–­ã€‚
		if pid, err := peer.Decode(fromPeer); err == nil && pid != "" {
			sourcePeer = pid
		}
	}
	candidate := &types.CandidateBlock{
		Block:     block,
		BlockHash: blockHash,
		Height:    block.Header.Height,

		ReceivedAt: time.Now(),
		Source:     sourcePeer,
		FromPeer:   fromPeer,
		LocalNode:  fromPeer == "",

		Verified:     false,
		VerifiedAt:   time.Time{},
		VerifyErrors: []string{},

		Selected:   false,
		SelectedAt: time.Time{},
		Expired:    false,

		Priority:         0,
		Difficulty:       block.Header.Difficulty,
		TransactionCount: len(block.Body.Transactions),
		EstimatedSize:    int(estimatedSize),
	}

	// å­˜å‚¨å€™é€‰åŒºå—
	p.candidates[blockHashKey] = candidate
	p.pendingCandidates[blockHashKey] = struct{}{}

	// æŒ‰é«˜åº¦ç´¢å¼•
	height := block.Header.Height
	p.candidatesByHeight[height] = append(p.candidatesByHeight[height], candidate)

	// æ›´æ–°å†…å­˜ä½¿ç”¨é‡ä¸ç»Ÿè®¡
	p.memoryUsage += estimatedSize
	p.totalAdded++

	// é€šçŸ¥ç­‰å¾…æ–¹
	p.notifyWaiters(height)

	// å‘å¸ƒäº‹ä»¶
	p.eventSink.OnCandidateAdded(candidate)

	if p.logger != nil {
		displayFrom := fromPeer
		if displayFrom == "" {
			displayFrom = "<local>"
		} else if !utf8.ValidString(displayFrom) {
			// é˜²å¾¡ï¼šå†å²ç‰ˆæœ¬å¯èƒ½æŠŠ peer.ID çš„åŸå§‹ bytes ç›´æ¥è½¬æˆ stringï¼Œå¯¼è‡´æ—¥å¿—ä¹±ç ã€‚
			// è¿™é‡Œè½¬æˆ hex å±•ç¤ºï¼Œä¿è¯å¯è§‚æµ‹æ€§ï¼Œä¸å½±å“å†…éƒ¨å­˜å‚¨è¯­ä¹‰ã€‚
			displayFrom = fmt.Sprintf("0x%x", []byte(displayFrom))
		}
		p.logger.Infof("æ·»åŠ å€™é€‰åŒºå—æˆåŠŸï¼Œé«˜åº¦: %d, å“ˆå¸Œ: %x, æ¥æº: %s, äº¤æ˜“æ•°: %d",
			height, blockHash[:8], displayFrom, len(block.Body.Transactions))
	}

	return blockHash, nil
}

// AddCandidates æ‰¹é‡æ·»åŠ å€™é€‰åŒºå—ã€‚
// å‚æ•°ï¼š
// - blocksï¼šå€™é€‰åŒºå—åˆ—è¡¨ï¼›
// - fromPeersï¼šå¯¹åº”æ¥æºèŠ‚ç‚¹IDåˆ—è¡¨ï¼Œé•¿åº¦éœ€ä¸ blocks ç›¸åŒã€‚
// è¿”å›ï¼š
// - [][]byteï¼šæˆåŠŸæ·»åŠ çš„åŒºå—å“ˆå¸Œåˆ—è¡¨ï¼›
// - errorï¼šè‹¥å­˜åœ¨éƒ¨åˆ†å¤±è´¥ï¼Œè¿”å›èšåˆé”™è¯¯ï¼ˆåŒ…å«å¤±è´¥è®¡æ•°ï¼‰ã€‚
func (p *CandidatePool) AddCandidates(blocks []*core.Block, fromPeers []string) ([][]byte, error) {
	if len(blocks) != len(fromPeers) {
		return nil, fmt.Errorf("åŒºå—æ•°é‡ä¸èŠ‚ç‚¹æ•°é‡ä¸åŒ¹é…")
	}

	var hashes [][]byte
	var errors []error

	for i, block := range blocks {
		hash, err := p.AddCandidate(block, fromPeers[i])
		if err != nil {
			errors = append(errors, err)
		} else {
			hashes = append(hashes, hash)
		}
	}

	if len(errors) > 0 {
		return hashes, fmt.Errorf("éƒ¨åˆ†å€™é€‰åŒºå—æ·»åŠ å¤±è´¥: %dä¸ªé”™è¯¯", len(errors))
	}

	return hashes, nil
}

// GetCandidatesForHeight è·å–æŒ‡å®šé«˜åº¦çš„æ‰€æœ‰å€™é€‰åŒºå—ï¼ˆè‹¥æ— åˆ™ç­‰å¾…ï¼‰ã€‚
// å‚æ•°ï¼š
// - heightï¼šç›®æ ‡é«˜åº¦ï¼›
// - timeoutï¼šç­‰å¾…è¶…æ—¶æ—¶é—´ã€‚
// è¿”å›ï¼š
// - []*types.CandidateBlockï¼šå€™é€‰åŒºå—åˆ—è¡¨ï¼›
// - errorï¼šè¶…æ—¶è¿”å› ErrTimeoutï¼›å…¶ä»–é”™è¯¯æŒ‰éœ€è¿”å›ã€‚
func (p *CandidatePool) GetCandidatesForHeight(height uint64, timeout time.Duration) ([]*types.CandidateBlock, error) {
	p.mu.RLock()
	candidates := p.candidatesByHeight[height]
	if len(candidates) > 0 {
		// åˆ›å»ºå‰¯æœ¬ä»¥é¿å…å¹¶å‘é—®é¢˜
		result := make([]*types.CandidateBlock, len(candidates))
		copy(result, candidates)
		p.mu.RUnlock()
		return result, nil
	}
	p.mu.RUnlock()

	// å¦‚æœæ²¡æœ‰å€™é€‰åŒºå—ï¼Œç­‰å¾…
	return p.waitForCandidatesAtHeight(height, timeout)
}

// GetAllCandidates è·å–æ‰€æœ‰å½“å‰å€™é€‰åŒºå—ï¼ˆå¿«ç…§ï¼‰ã€‚
// å‚æ•°ï¼šæ— ã€‚
// è¿”å›ï¼š
// - []*types.CandidateBlockï¼šå€™é€‰åŒºå—åˆ‡ç‰‡ï¼›
// - errorï¼šæ’ä¸º nilï¼ˆå½“å‰å®ç°ï¼‰ã€‚
func (p *CandidatePool) GetAllCandidates() ([]*types.CandidateBlock, error) {
	p.mu.RLock()
	defer p.mu.RUnlock()

	result := make([]*types.CandidateBlock, 0, len(p.candidates))
	for _, candidate := range p.candidates {
		result = append(result, candidate)
	}

	return result, nil
}

// WaitForCandidates ç­‰å¾…å€™é€‰åŒºå—è¾¾åˆ°æŒ‡å®šæ•°é‡æˆ–è¶…æ—¶ã€‚
// å‚æ•°ï¼š
// - minCountï¼šæœ€å°å€™é€‰æ•°é‡é˜ˆå€¼ï¼›
// - timeoutï¼šç­‰å¾…è¶…æ—¶æ—¶é—´ã€‚
// è¿”å›ï¼š
// - []*types.CandidateBlockï¼šå½“å‰å€™é€‰åŒºå—åˆ—è¡¨ï¼›
// - errorï¼šè¶…æ—¶è¿”å› ErrTimeoutï¼Œæ± å…³é—­è¿”å› ErrPoolClosedã€‚
func (p *CandidatePool) WaitForCandidates(minCount int, timeout time.Duration) ([]*types.CandidateBlock, error) {
	p.mu.RLock()
	if len(p.candidates) >= minCount {
		result := make([]*types.CandidateBlock, 0, len(p.candidates))
		for _, candidate := range p.candidates {
			result = append(result, candidate)
		}
		p.mu.RUnlock()
		return result, nil
	}
	p.mu.RUnlock()

	// ç­‰å¾…æ›´å¤šå€™é€‰åŒºå—
	waitCh := make(chan []*types.CandidateBlock, 1)

	p.mu.Lock()
	waitKey := fmt.Sprintf("count_%d_%d", minCount, time.Now().UnixNano())
	p.waitChannels[waitKey] = waitCh
	p.mu.Unlock()

	// æ¸…ç†ç­‰å¾…é€šé“
	defer func() {
		p.mu.Lock()
		delete(p.waitChannels, waitKey)
		p.mu.Unlock()
	}()

	timer := time.NewTimer(timeout)
	defer timer.Stop()

	select {
	case candidates := <-waitCh:
		return candidates, nil
	case <-timer.C:
		return nil, ErrTimeout
	case <-p.quit:
		return nil, ErrPoolClosed
	}
}

// calcBlockHash ä½¿ç”¨ç»Ÿä¸€å“ˆå¸ŒæœåŠ¡è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆè‹¥æ— åˆ™é‡‡ç”¨ç®€åŒ–è¿‘ä¼¼ï¼‰ã€‚
// å‚æ•°ï¼š
// - blockï¼šå€™é€‰åŒºå—ã€‚
// è¿”å›ï¼š
// - []byteï¼šåŒºå—å“ˆå¸Œï¼›
// - errorï¼šè°ƒç”¨å“ˆå¸ŒæœåŠ¡å¤±è´¥æˆ–åŒºå—æ— æ•ˆæ—¶è¿”å›é”™è¯¯ã€‚
func (p *CandidatePool) calcBlockHash(block *core.Block) ([]byte, error) {
	if p.hashService == nil {
		// å¦‚æœæ²¡æœ‰å“ˆå¸ŒæœåŠ¡ï¼Œä½¿ç”¨ç®€å•çš„å“ˆå¸Œè®¡ç®—ï¼ˆä»…ç”¨äºå¼€å‘/æµ‹è¯•ï¼‰
		return []byte(fmt.Sprintf("hash_%d_%d", block.Header.Height, block.Header.Timestamp)), nil
	}

	// ä½¿ç”¨æ³¨å…¥çš„å“ˆå¸ŒæœåŠ¡
	req := &core.ComputeBlockHashRequest{
		Block: block,
	}

	resp, err := p.hashService.ComputeBlockHash(context.Background(), req)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %v", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	return resp.Hash, nil
}

// å…¶ä»–å†…éƒ¨æ–¹æ³•è§åŒç›®å½• candidatepool_methods.goã€‚
// ç¡®ä¿CandidatePoolå®ç°äº†InternalCandidatePoolæ¥å£ï¼ˆç¼–è¯‘æœŸæ£€æŸ¥ï¼‰
var _ interfaces.InternalCandidatePool = (*CandidatePool)(nil)
