// Package testutil æä¾› Persistence æ¨¡å—æµ‹è¯•çš„è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•è¾…åŠ©å·¥å…·åŒ…**
//
// æœ¬åŒ…æä¾›æµ‹è¯•æ‰€éœ€çš„ Mock å¯¹è±¡ã€æµ‹è¯•æ•°æ®å’Œè¾…åŠ©å‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"context"
	"crypto/sha256"
	"errors"
	"io"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/eutxo/testutil"
	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/grpc"
)

// ==================== Mock å¯¹è±¡ ====================

// MockLogger ç»Ÿä¸€çš„æ—¥å¿—Mockå®ç°ï¼ˆå¤ç”¨ eutxo/testutilï¼‰
type MockLogger = testutil.MockLogger

// BehavioralMockLogger è¡Œä¸ºMockæ—¥å¿—ï¼ˆå¤ç”¨ eutxo/testutilï¼‰
type BehavioralMockLogger = testutil.BehavioralMockLogger

// MockBadgerStore å†…å­˜é”®å€¼å­˜å‚¨Mockï¼ˆå¤ç”¨ eutxo/testutilï¼‰
type MockBadgerStore = testutil.MockBadgerStore

// MockHashManager å“ˆå¸Œç®¡ç†å™¨Mockï¼ˆå¤ç”¨ eutxo/testutilï¼‰
type MockHashManager = testutil.MockHashManager

// MockFileStore æ–‡ä»¶å­˜å‚¨Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šå†…å­˜æ–‡ä»¶ç³»ç»Ÿï¼Œæ”¯æŒåŸºæœ¬æ–‡ä»¶æ“ä½œ
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šæ‰€æœ‰éœ€è¦æ–‡ä»¶å­˜å‚¨çš„æµ‹è¯•ç”¨ä¾‹
type MockFileStore struct {
	files   map[string][]byte
	mutex   sync.RWMutex
	fileInfos map[string]types.FileInfo
}

// NewMockFileStore åˆ›å»ºæ–°çš„ MockFileStore
func NewMockFileStore() *MockFileStore {
	return &MockFileStore{
		files:     make(map[string][]byte),
		fileInfos: make(map[string]types.FileInfo),
	}
}

// Save ä¿å­˜æ•°æ®åˆ°æŒ‡å®šè·¯å¾„
func (m *MockFileStore) Save(ctx context.Context, path string, data []byte) error {
	m.mutex.Lock()
	defer m.mutex.Unlock()

	m.files[path] = data
	m.fileInfos[path] = types.FileInfo{
		Size:      int64(len(data)),
		CreateTime: time.Now(),
		ModTime:    time.Now(),
		IsDir:     false,
	}

	return nil
}

// Load ä»æŒ‡å®šè·¯å¾„åŠ è½½æ•°æ®
func (m *MockFileStore) Load(ctx context.Context, path string) ([]byte, error) {
	m.mutex.RLock()
	defer m.mutex.RUnlock()

	data, exists := m.files[path]
	if !exists {
		return nil, errors.New("file not found")
	}

	return data, nil
}

// Delete åˆ é™¤æŒ‡å®šè·¯å¾„çš„æ–‡ä»¶
func (m *MockFileStore) Delete(ctx context.Context, path string) error {
	m.mutex.Lock()
	defer m.mutex.Unlock()

	if _, exists := m.files[path]; !exists {
		return errors.New("file not found")
	}

	delete(m.files, path)
	delete(m.fileInfos, path)
	return nil
}

// Exists æ£€æŸ¥æŒ‡å®šè·¯å¾„çš„æ–‡ä»¶æ˜¯å¦å­˜åœ¨
func (m *MockFileStore) Exists(ctx context.Context, path string) (bool, error) {
	m.mutex.RLock()
	defer m.mutex.RUnlock()

	_, exists := m.files[path]
	return exists, nil
}

// FileInfo è·å–æ–‡ä»¶ä¿¡æ¯
func (m *MockFileStore) FileInfo(ctx context.Context, path string) (types.FileInfo, error) {
	m.mutex.RLock()
	defer m.mutex.RUnlock()

	info, exists := m.fileInfos[path]
	if !exists {
		return types.FileInfo{}, errors.New("file not found")
	}

	return info, nil
}

// ListFiles åˆ—å‡ºæŒ‡å®šç›®å½•ä¸‹çš„æ‰€æœ‰æ–‡ä»¶
func (m *MockFileStore) ListFiles(ctx context.Context, dirPath string, pattern string) ([]string, error) {
	m.mutex.RLock()
	defer m.mutex.RUnlock()

	var files []string
	for path := range m.files {
		// ç®€å•çš„ç›®å½•åŒ¹é…ï¼ˆå®é™…å®ç°åº”è¯¥æ›´å¤æ‚ï¼‰
		if dirPath == "" || len(path) >= len(dirPath) && path[:len(dirPath)] == dirPath {
			files = append(files, path)
		}
	}

	return files, nil
}

// MakeDir åˆ›å»ºç›®å½•
func (m *MockFileStore) MakeDir(ctx context.Context, dirPath string, recursive bool) error {
	m.mutex.Lock()
	defer m.mutex.Unlock()

	m.fileInfos[dirPath] = types.FileInfo{
		Size:      0,
		CreateTime: time.Now(),
		ModTime:    time.Now(),
		IsDir:     true,
	}

	return nil
}

// DeleteDir åˆ é™¤ç›®å½•
func (m *MockFileStore) DeleteDir(ctx context.Context, dirPath string, recursive bool) error {
	m.mutex.Lock()
	defer m.mutex.Unlock()

	// åˆ é™¤ç›®å½•ä¸‹çš„æ‰€æœ‰æ–‡ä»¶
	for path := range m.files {
		if len(path) >= len(dirPath) && path[:len(dirPath)] == dirPath {
			delete(m.files, path)
			delete(m.fileInfos, path)
		}
	}

	delete(m.fileInfos, dirPath)
	return nil
}

// Copy å¤åˆ¶æ–‡ä»¶
func (m *MockFileStore) Copy(ctx context.Context, srcPath, dstPath string) error {
	m.mutex.Lock()
	defer m.mutex.Unlock()

	data, exists := m.files[srcPath]
	if !exists {
		return errors.New("file not found")
	}

	m.files[dstPath] = data
	m.fileInfos[dstPath] = types.FileInfo{
		Size:      int64(len(data)),
		CreateTime: time.Now(),
		ModTime:    time.Now(),
		IsDir:     false,
	}

	return nil
}

// Move ç§»åŠ¨æ–‡ä»¶
func (m *MockFileStore) Move(ctx context.Context, srcPath, dstPath string) error {
	if err := m.Copy(ctx, srcPath, dstPath); err != nil {
		return err
	}
	return m.Delete(ctx, srcPath)
}

// OpenReadStream æ‰“å¼€è¯»å–æµ
func (m *MockFileStore) OpenReadStream(ctx context.Context, path string) (io.ReadCloser, error) {
	m.mutex.RLock()
	defer m.mutex.RUnlock()

	data, exists := m.files[path]
	if !exists {
		return nil, errors.New("file not found")
	}

	return &mockReadCloser{data: data}, nil
}

// OpenWriteStream æ‰“å¼€å†™å…¥æµ
func (m *MockFileStore) OpenWriteStream(ctx context.Context, path string) (io.WriteCloser, error) {
	return &mockWriteCloser{
		store: m,
		path:  path,
		ctx:   ctx,
	}, nil
}

// mockReadCloser æ¨¡æ‹Ÿè¯»å–æµ
type mockReadCloser struct {
	data []byte
	pos  int
}

func (m *mockReadCloser) Read(p []byte) (n int, err error) {
	if m.pos >= len(m.data) {
		return 0, io.EOF
	}
	n = copy(p, m.data[m.pos:])
	m.pos += n
	return n, nil
}

func (m *mockReadCloser) Close() error {
	return nil
}

// mockWriteCloser æ¨¡æ‹Ÿå†™å…¥æµ
type mockWriteCloser struct {
	store *MockFileStore
	path  string
	ctx   context.Context
	buf   []byte
}

func (m *mockWriteCloser) Write(p []byte) (n int, err error) {
	m.buf = append(m.buf, p...)
	return len(p), nil
}

func (m *mockWriteCloser) Close() error {
	return m.store.Save(m.ctx, m.path, m.buf)
}

// MockBlockHashServiceClient åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯Mock
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šä½¿ç”¨ sha256 è®¡ç®—åŒºå—å“ˆå¸Œ
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šæ‰€æœ‰éœ€è¦åŒºå—å“ˆå¸ŒæœåŠ¡çš„æµ‹è¯•ç”¨ä¾‹
type MockBlockHashServiceClient struct{}

// ComputeBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ
func (m *MockBlockHashServiceClient) ComputeBlockHash(ctx context.Context, in *core.ComputeBlockHashRequest, opts ...grpc.CallOption) (*core.ComputeBlockHashResponse, error) {
	// ç®€åŒ–å®ç°ï¼šä½¿ç”¨åŒºå—é«˜åº¦çš„å“ˆå¸Œ
	hasher := sha256.New()
	if in.Block != nil && in.Block.Header != nil {
		hasher.Write([]byte{byte(in.Block.Header.Height)})
		if in.Block.Header.PreviousHash != nil {
			hasher.Write(in.Block.Header.PreviousHash)
		}
	}
	hash := hasher.Sum(nil)
	return &core.ComputeBlockHashResponse{
		Hash:     hash,
		IsValid:  true,
	}, nil
}

// ValidateBlockHash éªŒè¯åŒºå—å“ˆå¸Œ
func (m *MockBlockHashServiceClient) ValidateBlockHash(ctx context.Context, in *core.ValidateBlockHashRequest, opts ...grpc.CallOption) (*core.ValidateBlockHashResponse, error) {
	resp, err := m.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: in.Block})
	if err != nil {
		return nil, err
	}
	isValid := len(in.ExpectedHash) == len(resp.Hash)
	return &core.ValidateBlockHashResponse{
		IsValid:      isValid,
		ComputedHash: resp.Hash,
		ExpectedHash: in.ExpectedHash,
	}, nil
}

// MockTransactionHashServiceClient äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯Mock
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šä½¿ç”¨ sha256 è®¡ç®—äº¤æ˜“å“ˆå¸Œ
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šæ‰€æœ‰éœ€è¦äº¤æ˜“å“ˆå¸ŒæœåŠ¡çš„æµ‹è¯•ç”¨ä¾‹
type MockTransactionHashServiceClient struct{}

// ComputeHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func (m *MockTransactionHashServiceClient) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	// ç®€åŒ–å®ç°ï¼šä½¿ç”¨äº¤æ˜“æ•°æ®çš„å“ˆå¸Œ
	hasher := sha256.New()
	if in.Transaction != nil {
		hasher.Write([]byte("tx"))
	}
	hash := hasher.Sum(nil)
	return &transaction.ComputeHashResponse{
		Hash:    hash,
		IsValid: true,
	}, nil
}

// ValidateHash éªŒè¯äº¤æ˜“å“ˆå¸Œ
func (m *MockTransactionHashServiceClient) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	resp, err := m.ComputeHash(ctx, &transaction.ComputeHashRequest{Transaction: in.Transaction})
	if err != nil {
		return nil, err
	}
	isValid := len(in.ExpectedHash) == len(resp.Hash)
	return &transaction.ValidateHashResponse{
		IsValid:      isValid,
		ComputedHash: resp.Hash,
		ExpectedHash: in.ExpectedHash,
	}, nil
}

// ComputeSignatureHash è®¡ç®—ç­¾åå“ˆå¸Œ
func (m *MockTransactionHashServiceClient) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	// ç®€åŒ–å®ç°ï¼šä½¿ç”¨äº¤æ˜“å“ˆå¸Œ
	resp, err := m.ComputeHash(ctx, &transaction.ComputeHashRequest{Transaction: in.Transaction})
	if err != nil {
		return nil, err
	}
	return &transaction.ComputeSignatureHashResponse{
		Hash:    resp.Hash,
		IsValid: true,
	}, nil
}

// ValidateSignatureHash éªŒè¯ç­¾åå“ˆå¸Œ
func (m *MockTransactionHashServiceClient) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	resp, err := m.ComputeSignatureHash(ctx, &transaction.ComputeSignatureHashRequest{Transaction: in.Transaction})
	if err != nil {
		return nil, err
	}
	isValid := len(in.ExpectedHash) == len(resp.Hash)
	return &transaction.ValidateSignatureHashResponse{
		IsValid:      isValid,
		ComputedHash: resp.Hash,
		ExpectedHash: in.ExpectedHash,
	}, nil
}

// ==================== Mock å­æŸ¥è¯¢æœåŠ¡ ====================

// MockInternalChainQuery å†…éƒ¨é“¾æŸ¥è¯¢æœåŠ¡Mock
type MockInternalChainQuery struct{}

func (m *MockInternalChainQuery) GetChainInfo(ctx context.Context) (*types.ChainInfo, error) {
	return &types.ChainInfo{
		Height:        0,
		BestBlockHash: make([]byte, 32),
		NodeMode:      types.NodeModeFull,
	}, nil
}

func (m *MockInternalChainQuery) GetCurrentHeight(ctx context.Context) (uint64, error) {
	return 0, nil
}

func (m *MockInternalChainQuery) GetBestBlockHash(ctx context.Context) ([]byte, error) {
	return make([]byte, 32), nil
}

func (m *MockInternalChainQuery) GetNodeMode(ctx context.Context) (types.NodeMode, error) {
	return types.NodeModeFull, nil
}

func (m *MockInternalChainQuery) IsDataFresh(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *MockInternalChainQuery) IsReady(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *MockInternalChainQuery) GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error) {
	return &types.SystemSyncStatus{
		Status:        types.SyncStatusSyncing,
		CurrentHeight: 0,
		NetworkHeight: 0,
		SyncProgress:  0.0,
	}, nil
}

func (m *MockInternalChainQuery) GetQueryMetrics(ctx context.Context) (*interfaces.QueryMetrics, error) {
	return &interfaces.QueryMetrics{
		QueryCount:   0,
		SuccessCount: 0,
		FailureCount: 0,
		IsHealthy:    true,
	}, nil
}

// MockInternalBlockQuery å†…éƒ¨åŒºå—æŸ¥è¯¢æœåŠ¡Mock
type MockInternalBlockQuery struct{}

func (m *MockInternalBlockQuery) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	return &core.Block{
		Header: &core.BlockHeader{
			Height: height,
		},
	}, nil
}

func (m *MockInternalBlockQuery) GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error) {
	return &core.Block{
		Header: &core.BlockHeader{},
	}, nil
}

func (m *MockInternalBlockQuery) GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error) {
	return &core.BlockHeader{}, nil
}

func (m *MockInternalBlockQuery) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	return []*core.Block{}, nil
}

func (m *MockInternalBlockQuery) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	return 0, make([]byte, 32), nil
}

// MockInternalTxQuery å†…éƒ¨äº¤æ˜“æŸ¥è¯¢æœåŠ¡Mock
type MockInternalTxQuery struct{}

func (m *MockInternalTxQuery) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, tx *transaction.Transaction, err error) {
	return make([]byte, 32), 0, &transaction.Transaction{}, nil
}

func (m *MockInternalTxQuery) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	return 0, nil
}

func (m *MockInternalTxQuery) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return time.Now().Unix(), nil
}

func (m *MockInternalTxQuery) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return 0, nil
}

func (m *MockInternalTxQuery) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transaction.Transaction, error) {
	return []*transaction.Transaction{}, nil
}

// MockInternalUTXOQuery å†…éƒ¨UTXOæŸ¥è¯¢æœåŠ¡Mock
type MockInternalUTXOQuery struct{}

func (m *MockInternalUTXOQuery) GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxo.UTXO, error) {
	return &utxo.UTXO{}, nil
}

func (m *MockInternalUTXOQuery) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return []*utxo.UTXO{}, nil
}

func (m *MockInternalUTXOQuery) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return []*utxo.UTXO{}, nil
}

func (m *MockInternalUTXOQuery) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return make([]byte, 32), nil
}

func (m *MockInternalUTXOQuery) CheckAssetUTXOConsistency(ctx context.Context) (bool, error) {
	return false, nil // é»˜è®¤è¿”å›ä¸€è‡´ï¼ˆinconsistent=falseï¼‰
}

func (m *MockInternalUTXOQuery) RunAssetUTXORepair(ctx context.Context, dryRun bool) error {
	return nil // é»˜è®¤æˆåŠŸ
}

// MockInternalResourceQuery å†…éƒ¨èµ„æºæŸ¥è¯¢æœåŠ¡Mock
type MockInternalResourceQuery struct{}

func (m *MockInternalResourceQuery) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error) {
	return &pb_resource.Resource{}, nil
}

func (m *MockInternalResourceQuery) GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error) {
	return &pb_resource.Resource{}, false, nil
}

func (m *MockInternalResourceQuery) GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error) {
	return make([]byte, 32), make([]byte, 32), 0, nil
}

func (m *MockInternalResourceQuery) CheckFileExists(contentHash []byte) bool {
	return false
}

func (m *MockInternalResourceQuery) BuildFilePath(contentHash []byte) string {
	return ""
}

func (m *MockInternalResourceQuery) ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error) {
	return [][]byte{}, nil
}

func (m *MockInternalResourceQuery) GetResourceByInstance(ctx context.Context, txHash []byte, outputIndex uint32) (*pb_resource.Resource, bool, error) {
	return &pb_resource.Resource{}, false, nil
}

func (m *MockInternalResourceQuery) ListResourceInstancesByCode(ctx context.Context, contentHash []byte) ([]*transaction.OutPoint, error) {
	return []*transaction.OutPoint{}, nil
}

// MockInternalAccountQuery å†…éƒ¨è´¦æˆ·æŸ¥è¯¢æœåŠ¡Mock
type MockInternalAccountQuery struct{}

func (m *MockInternalAccountQuery) GetAccountBalance(ctx context.Context, address []byte, tokenID []byte) (*types.BalanceInfo, error) {
	return &types.BalanceInfo{
		Address: &transaction.Address{},
		TokenID: tokenID,
		Available: 0,
		Locked: 0,
		Pending: 0,
		Total: 0,
	}, nil
}

// MockInternalPricingQuery å†…éƒ¨å®šä»·æŸ¥è¯¢æœåŠ¡Mock
type MockInternalPricingQuery struct{}

func (m *MockInternalPricingQuery) GetPricingState(ctx context.Context, resourceHash []byte) (*types.ResourcePricingState, error) {
	return nil, nil
}

